--- a/道德是什么.md
+++ b/道德是什么.md
@@ -1,1 +1,69 @@
+# 道德是什么 | 从道德哲学到进化论
+
+道德问题总是让我们深深着迷。我们最喜欢的故事，往往与善恶有关，不管是虚构的小说、电影，还是真实的新闻报道、历史记录。我们希望看到好人有好报，但我们更希望看到的，还是坏人遭恶报。
+
+## 哲学
+
+道德哲学家会设计出很多复杂的道德困境，如**电车难题**，然后借助自己的道德直觉来解决困境、完善理论。整个过程非常烧脑。面对这类道德困境，**往往在你履行其中一项道德义务时，就意味着对另一项道德义务的背弃。**如果没有比较"坚定的"指导思想告诉你要背弃哪一项是很难走出困境的。
+
+![电车难题](https://github.com/GUANGWEIYU/notes/images/1.png)
+
+道德哲学中有两个典型的流派：**结果论者**主张根据行为带来的结果来做道德判断，如某行为是否能提升全人类的快乐总和；**义务论者**主张人应遵循某些普遍的道德原则，就算它们可能会带来糟糕的后果。**结果论者可能会争辩说，在某些特殊情况下，对他人施以酷刑是正确的行为(基至是对无辜之人)，只要这样做能给整体带来更好结果**，比如它带来的快乐总和大于痛苦，或者它能拯救更多人的生命，又或者它能帮助更多人达成目标。义务论者则与之截然相对，部分义务论者坚持认为，对他人施以酷刑无论如何都是错误的行为，因为它违反了某些绝对的道德原则，比如“不得侵犯人类的内在尊严”。所以**对这样一位义务论者来说，就算对他人施以酷刑能拯救100万名无辜者的生命，也是错误的行为。**
+
+## 社会&心理
+
+**哲学家关注的是什么是真正正确的和错误的；而心理学家往往关注，人们"*认为*"什么是正确的和错误的。**很明显，心理学家更关注的是认知这个微妙的过程。这可以解释为什么有时我们的道德直觉会自相矛盾：同样的行为，经过不同的方式叙述，我们所得到的道德判断不同。拥有同样道德准则的两个人在面对需要帮助的人时，共情能力强的人会更愿意伸出援助之手。**道德是什么？从心理学角度简单地回答，道德就是对善恶的认知。**
+
+但是善和恶本身并不简单。首先，自然界中并没有客观的善恶之分，也没有超意识的力量告诉我们这个是善，那个是恶；其次，我们也不会在探索自然规律时发现什么"善恶三定律"，来为我们今后的选择作出道德判断。善和恶是人类编造出来的概念，而且每个人都对这个概念有主观的认知，**不简单之处就在于很难把所有人的主观认知统一起来。**
+
+正如你所知道的，**我们很多的道德准则是后天从文化中吸取的**，即所谓的习俗;**还有一部分是自身养成的道德习惯**，这些道德准则一旦被你接受并内化，在你遇到相应道德抉择时，就会无须考虑地做出选择。
+
+## 历史角度
+
+不难理解，**道德传统和道德观念在不同的文化中会有不同的面貌。**但多数人没有注意到的是，**道德在不同的历史时期其规则也是不同的**。历史学家把经济史分为三个阶段——**狩猎期**、**农业期**和**工业期**——发现，一个阶段的道德规则将会在下一个阶段发生改变。在狩猎阶段，一个人必须随时准备好去追捕、格斗和砍杀。当他抓到了猎物，总是要吃下三倍于自己消化量的食物。当时生存的考验取决于杀戮的能力，男性死亡率高，一些男人必须同时拥有几个女人，每个男人都被期望能使妇女频繁怀孕。因此**好斗、残暴、贪婪和好色**，在为生存而战斗的时代，是一大优势。**很可能今天的每一种恶，在以前都曾经被视为品质**——一种使个人、家庭或者团体得以生存的美德。
+
+![母系社会](https://github.com/GUANGWEIYU/notes/images/2.png)
+
+> **新的制度要求新的美德，同时把一些旧的美德视为罪恶。**于是，**在农业社会勤奋变得比勇猛更加重要，讲究规则和节俭比武力更有价值，和平比战争更加有利**。孩子们是经济资产，节育是不道德的。农业以家庭为生产单位，受父亲和季节变化的支配，父权有坚实的经济基础。每一个正常的男童，在心智和自立方面都成熟得很快。在15岁时，他就会对生活中的体力工作有所了解。他需要的不外乎土地、耕具，以及健康勤快的臂膀。所以他早早结婚，几乎与自然的要求同步，他不必为新秩序下永久性的定居式家庭模式对婚前关系的严格限制而长久焦虑。对于年轻女性来说，贞操是必不可少的，因为如果失去贞操，她可能变成弃妇。一夫一妻制是两性数量大致平衡的要求。1500年以来，**贞操、早婚、一夫一妻、白头偕老和多生多育**，这些农业道德规范，一直在延续着。这是一套严格的规范，它在历史上产生了某些最为顽固的特征。
+
+> 工业革命改变了人类的经济形态和上层道德结构。这个过程先是缓慢发生，然后迅速而广泛地展开。男人、女人和子女离开故乡和家庭，**放弃权威社群**，以个人的身份去工厂打工，所得也归个人所有，经济独立使子女不再是经济资产。随着技术的发展，机器操作变得越来越复杂，经济自立延后，婚姻被推迟，婚前贞操变得更加难以维持。城市让人对婚姻望而却步，但为性提供的刺激和方便却应有尽有。女人被“解放”了，甚至商业化了，同时避孕药使她们能够将性交与怀孕分离开来。**个人主义**在工业社会日益增长，使得**父亲和母亲的权威失去了其存在的经济基础**。叛逆的年轻人不再受小群体的监督和限制，他可以在素不相识的城市人群中隐藏自己的罪孽。教育的传播助长了对宗教的怀疑，**道德规范失去了越来越多超自然的支持力量**。旧的农业道德规范开始走向灭亡。
+
+**道德规范之所以不同，是因为它们需要不断调整自身去适应历史和环境的条件。**杜兰特夫妇总结道"**道德是社会准则，充当社会告诫者的角色，劝诫其成员与团体，在行为上要和社会秩序、安全和发展相一致**"。这句话和很多人认为的"道德就是做事不完全按照自己的想法，要考虑别人的感受"有相似之处。两句话都体现了**道德的社会性本源**，道德行为的基础就是考虑到别人的感受。
+
+## 进化的意义
+
+人归根到底是社会性的，这也可以看作是道德形成的原因，**道德被赋予了与社会性有关的对错之感**。不管你信不信，这种对错感如同听、看一样，已经成为人类本能的一部分，这也是道德真正的基础。对婴儿的研究证实了这一点，**人类在生命之初就具备一种根本的道德感，对是非善恶的判断是乎在每个人的骨子里与生俱来。**如果你认为进化的意义只不过是"适者生存"，或者是"尖牙利爪之下的血色自然之道”，那么**那些从未相互接触过的不同人类文化圈中普遍存在的普世性的道德公理**就不可能根植于我们的本性之中。
+
+比如有一种道德意识是**"善待血亲"**。从进化的角度来看，这条策略的优势显而易见。我们可以举一个最简单的例子，假设一位父亲和自己的孩子共同生活。我们不需要建立任何复杂的进化模型，就知道如果这位父亲肯悉心照顾自己的孩子，那么他的基因就更有可能得到传播，这种保护自己孩子的本能也会传给儿子。反之，如果他抛弃或者吃掉自己的孩子，他的基因就不太可能传递下去。大自然偏爱多样性，或许地球动物进化的早期出现过随意就会吃掉自己孩子的动物，但因为带有自己基因的孩子被吃了，**这些动物"吃孩子的基因"也就不能够继续传递下去，最后地球上只剩下那些携带"会拼命保护孩子的基因"的动物。进化"*塑造*"了行为规则。**
+
+![照顾幼崽](https://github.com/GUANGWEIYU/notes/images/3.png)
+
+自然进化远比达尔文口中的"生存挣扎”更为微妙。虽然**自然选择本身没有"道德"可言，但是它可能在我们的基因之中为道德思考和道德行为打下了基础**。假如我们在进化生物学和发展心理学的基础上建立起我们的道德心理学，那么我们会发现**大多数道德问题都可以从进化和适应性的角度加以解释**。
+
+除了直系亲属间存在血缘纽带之外，兄弟姐妹篇至表亲之间也存在血缘联系，只不过要弱于直系亲属。但是**血缘纽带只是强弱不同而已，并没有什么本质区别。这种机制甚至可以延伸到血亲之外的小群体。这样来看，自私的基因也能创造出无私的动物**——他们会以无私之心珍爱他人，就好像他们珍爱自己一样，我们也能以友善慷慨之心对待那些和我们没有任何血缘联系的人。我们的祖先会一起分享、一起采集果实、一起照顾幼子。**这条策略的进化得以出现正因为有了共同劳作，我们才会生活得更好。**
+
+**社会性的自然发展起源于家庭和部落中的小型群体**，因此，**人类在内的群居类动物进化出了能帮助群成员跟平时常见之人和谐相处的社会本能。**由于我们常会与本群体内的其他成员发生长期、反复的接触，所以帮助他人的人会因为他人知恩图报而深感欣慰，也会因为好心没好报而对他人施以惩戒或者刻意回避，而不具备这些情感的人就会失去繁殖优势。所以我们不难预测，**每个个体都首先关爱自己，然后再推及亲近之人。仅仅因为对象不同，我们的利他主义和道德准则也会发生变化**——我们对待亲朋好友比对待其他人更为友善慷慨。这一思想倾向成为我们道德本能的一部分，这也就解释了我们的大脑为何会像现在这样思考，这是自然选择背后的逻辑。但**这些社会本能的用途并不在于指导我们与不知名姓的陌生人交流互动**。也许你在新闻上听到过，一些身体健康的人把器官捐献给了一个素不相识的人，**可人类的这种对陌生人的善意并不是与身俱来的，我们在遇到不知名姓的陌生人时的本能反应也绝不是仁慈友爱，陌生人会激起我们的恐惧、厌恶，甚至是仇恨。**人类历史的绝大部分时间里，没有人觉得种族主义有什么错。
+
+**就像如果不清楚人类的起源我们就无法认识人类的本质一样，不能弄清我们的道德本能和道德思维的确切起源我们也就不会真正理解道德。**有人提出，人类道德感来源于合作行为能给我们带来益处，特别是在有亲属关系的个体之间。还有人就"**群体选择**"(即在群体层次上进行的自然选择)问题展开了讨论，群体选择是否在道德发展中扮演了某种角色?我们为何会产生惩罚背叛者、不劳而获者和其他败类的冲动?其进化根源究竟是什么?
+
+人们在这些问题上一直争论不休。我们之所以会**进化出惩罚他人的道德本能**，是不是因为会惩罚背叛者和不劳而获者的群体比不去惩罚的群体更具备生存优势和繁殖优势?**毕竟要想通过协作而让社会繁荣发展，每个社会成员都必须克制自己的私欲，不能占他人的便宜。**好社区中的坏角色，就好比伊甸园里的那条蛇，它会劫取最甜美的果实，不付出任何代价就能从合作中受益。如果邪恶的基因繁衍扩散，那么毫无疑问，整个人类社会只会越变越槽。
+
+## 总结
+
+虽然很多问题都还没有找到确切答案，但**一切与道德起源有关的进化理论无不强调社群、友谊，特别是亲属关系的重要性。似乎在进化意义上，道德就是一种社会性的情感，并且这种情感会被以地球上所有生命体都能理解的语言编码进基因里，和其它基因特性一样在物种内和物种间传递。**达尔文在谈到人类道德能力的起源时就曾经推测，**在地球上生存过的每一种动物必然都被赋予了社会性的本能**。越来越多科学家认为，决定人类行为的不是什么自由意志，而是荷尔蒙、基因和神经突触——这样看来我们和黑猩猩、狼、蚂蚁并无不同。《盛装猿》的作者庆幸于自身早期与动物相伴的经验加深了自己对人类的认识，还**把小孩比作是本能和冲动还未经驯化的野生动物**。每当我们看到其它动物的社会性互动时，都会惊讶地发出**人类中心主义式**的感慨：有些动物真的能够通人性啊！**但事实可能相反：人类拥有的社会性本能，是沿着进化的轨迹从其它动物那里传承过来的。**毕竟智人才出现20多万年，在动物界只能算是个新生儿。**人类之所以拥有自以为高尚、可以将自己和所有动物区分开来的道德感，首先是因为我们从大自然中继承了携带着"原始道德本能"的古老基因，然后才在此基础上发展出拥有特殊目的的道德规范系统。**
+
+![凝视](https://github.com/GUANGWEIYU/notes/images/4.png)
+
+其实**某种程度上来说，人类是最邪恶的物种**。因为自然界中没有哪个物种像人类这样**大规模且有计划地**去屠杀自己的同类。但屠杀同类显示人类残忍的同时，也表现出了人类与其它动物之间**最本质的区别：构建想象**。人类不会说"他们是同类，所以我们要杀了他们"。通常我们**本能的心理过程**是，找出与“他们”各种各样或明显或细微或无关紧要或臆造出来的差异，构建出一个完全不同特质的群体，然后再把他们贬低丑化。无法了解，**甚至无须去了解他们**群体中的每一个成员，**就可以**把这个群体里的所有人想象成是异类，是邪恶的、贪婪的、肮脏的，然后厌恶地说，"我们站在正义的一方，我们要消灭他们。"
+
+你能说我是邪恶的吗？我代表的是善。
+<br />
+<br />
+<br />
+
+<br />
+##### References：
+Harari, Y. N.  A brief history of humankind [M].  2014<br />
+Durant, W. & A. Durant.  The lessons of history [M].  2015<br />
+Bloom, P.  Just Babies: The Origins of Good and Evil [M].  2015
 
