--- a/别人的评价.md
+++ b/别人的评价.md
@@ -1,1 +1,49 @@
 # 为什么我们在乎别人的评价？
+
+如果你视力不好，你就得想办法解决，你可能会戴眼镜或者隐形眼镜。但是如果你听力不好，你有多大可能性会去佩戴助听器？统计的结果是**四分之一**。为什么那些听力差的人，除非迫不得已，否则就不会主动去戴助听器？一部分原因在于助听器比较贵。但在英国和澳大利亚，那里的国家健康系统提供免费的助听器，多数人还是选择不去理睬。
+
+出于对自我形象的关注，人们把无数钱财都花在了染发、牙齿漂白和整容上，我们可能不想让任何人认为自己的听力有问题。但是其他人是否真的关心你的耳朵上有个什么小东西呢？更多的时候别人一心只在想着自己，根本不会注意到你戴的那个小东西。**事实上，在交谈时，听力很差（不戴助听器）比戴助听器更能引人注意。**
+
+很显然，在我们心中，自己比其他任何事更重要。我们以自我为中心，这样可能就太觉得自己惹人注目。这种焦点效应意味着，人们往往会把自己看作一切的中心，并且直觉地高估别人对我们的关注度。心理学家吉洛维奇等人证实了这种**焦点效应**的存在。
+
+**助听器上出现的现象同样会出现在社交上，*我们会高估自己的社交失误的显著性*。**例如今天穿的鞋子和衣服非常不搭或者我是聚会上唯一没有准备礼物的客人，"大家肯定都以为我是一个怪人"。但是研究发现，**我们所受到的烦恼，别人经常注意不到，即使注意到还可能很快就会忘记。**
+
+**可能正因为这种自我关注，*我们的行为往往带有一定的策略*。我们总希望给人留下好印象**，经常为自己的外表感到头疼，即使这些小缺点并不像我们想象地那样会得到那么多的关注。如果你在聚会上穿了一套自认为很怪异的衣服，那天晚上会比平时低调很多，而不是招摇过市地去赢得注意。**当我们处在一个角色中时，其实就已经开始了自我察觉，我们开始关注其他人对我们的期望，并随之调整自己的行为。**所以**我们的行为会和自己处于关系中的角色紧密相连**，和父母在一起时我们是一个样子，和老师在一起则是另外一个样子，而和朋友在一起时又是另外一个完全不同的样子。毕竟，为什么要冒着别人可能降低对我们好感的风险呢？**我们时刻都在关注着自己，我们对自己的认识影响我们如何感知、回忆和评价自己。**
+
+![镜像自我](https://timgsa.baidu.com/timg?image&quality=80&size=b10000_10000&sec=1479652750&di=a8781940629cb4e962b44114c22223e8&src=http://s4.sinaimg.cn/bmiddle/5634ea2dg7ea9775ac9a3&690)
+
+那么重要的问题来了！是什么决定了我们对自己的认识？研究发现，**基因和社会经验都会对自我认识有重要的影响**，本文不去关注基因的影响，因为它不能改变。除了上文的关系中的角色，还有两个比较特殊的社会经验：社会比较和他人的评价。
+
+## 1.社会比较
+
+我们如何判断自己是否富有、聪明或矮小？一种重要的方式是通过社会比较。**我们周围的人会帮助我们建立富有或贫穷、聪明或愚舞、高大或矮小的标准，通过与他人的比较来测量自己的能力和态度。**
+
+我们生活的大部分是围绕社会比较而进行的。当别人不漂亮时我们就觉得自己美丽或英俊，当别人迟钝时就觉得自己聪明，当别人冷血时就觉得自己有同情心。**当我们评价某个人的表现时，不可能不把他和自己做比较。**我们有时想要去追求更高水平的自己，这时候会把自己与在某种特定能力上比自己强的人相比较。但是我们也会利用社会比较来抬高自己。如果你的某一自我认识是比较核心的，那么它就对你非常重要，所以你就会无意识地将自己与这种特定特点或能力方面比自己差的人进行比较，这是**一种自我保护和自我提升的策略**。
+
+![艾宾浩斯](https://timgsa.baidu.com/timg?image&quality=80&size=b10000_10000&sec=1479653213&di=4407f88ca30ba68c6634dc7b3399fe26&src=http://pic.kekenet.com/2015/1208/20781449543746.jpg)
+
+显然，选择什么样的参照对象十分关键。但是，就自我认识来说，最好还是把我们自己**与我们自己相似的人做比较**。
+
+## 2.通过他人的眼镜来观察自己
+
+有时，别人对我们的性格和感觉的看法与我们自己有所不同。通常是我们自己的观点是正确的，毕竟，我们会比任何人更了解自己。但有时别人也可能是对的。例如，在一项研究中，**大学学生无法对自己是否出于慈善的动机而去买一枝花做出准确的预测，但他们却能够非常准确地预测他人的行为**（Epley & Dunning,2000）。换句话说，如果你想知道某些学生是否会买花，问班上的同学将会比问他们自己得到更准确的答案。**可能的原因是，我们也许不愿意承认自己身上的负面特征，承认其他人不会帮助一个贫穷的慈善团体比承认自己不会这样做要容易得多。**
+
+通过他人的眼睛来观察自己的另一个重要途径就是**别人的评价**。成就得到认可能增强个体的自我概念，因为我们看到了别人对自己的积极评价。当别人认为我们很好时，我们也会认为自己不错。如果我们称赞某个孩子很有才华、学习刻苦或者乐于助人，那么这个孩子就会把这些观点融入其自我概念和行为中去。
+
+另外，社会学家查尔斯·库利用**“镜像自我”**来描述个体把别人当做镜子来进行自我感知。库利认为，**我们根据自己出现在他人面前的样子来感知自我**。之后社会学家乔治·米德精炼了这个观点，他指出:**与我们的自我概念有关的并不仅仅是别人实际上如何评价我们，而是我们觉得他们如何评价我们。**"我们觉得"，这是一个心理学色彩非常浓厚的词，它意味着，当我们在聚会上穿着**"我们觉得"**怪异的服装，不需要别人真正说出来他对我们的看法，我们自己就会**"觉得"**他人会如何评价我们。
+
+**可见对自我的认识不是在单独的背景下发展的，而是在我们周围人的作用下形成的。但是怎样认识自己直接影响到我们对自己的评价**，也就是自尊（自我价值感，即我们对自己的概括性评价——心理学的解释，可能和生活中的概念有差别）。
+
+**低自尊在某种程度上可以被描述为对自我的偏低肯定。**相对于高自尊，低自尊的人在许多特质维度（诸如逻辑性、聪慧、讨人喜欢的程度）上对自己进行评定时，低自尊的人对自己各方面的评价普遍偏低。低自尊的人在抑郁、滥用毒品和一些形式的行为过失方面面临更高风险，"毕竟我这么差劲，做一些不光彩的事情也无所谓"。高自尊则有利于培养主动、乐观和愉快的感觉。当发现自己的自尊受到威胁时，人们常常以打压他人的方式来尽力平衡或修复自己受到的自尊威胁，有时甚至是暴力的方式，受伤的自尊引发的报复行为是十分危险的。**当受到别人的批评或者我们的观点不被认同时，我们就会感到自尊受到威胁，并因此情绪低迷，感到自己一无是处，显得特别痛苦。**而感觉自己有价值的人会更加快乐，面对挫折更加百折不饶。
+
+**价值低下，对社会性动物是致命的**，因为你没价值就不大可能为别人提供价值，你就不会被其他成员需要。在个体依靠群体才能生存下来的原始社会，不被群体需要甚至有生命危险。**我们祖先的命运决定于别人如何评价他们，当他受到群体的保护时，生存机会会变大，当他们意识到群体对自己不满时就会出现焦虑。作为他们的后代，我们有类似的根深蒂固的归属需要，当我们面对社会排斥时会感到低自尊的痛苦。**
+
+![猩猩](http://m.c.lnkd.licdn.com/mpr/mpr/shrinknp_800_800/AAEAAQAAAAAAAAe7AAAAJDY5OTYxYmFhLTBmYjctNGJjZi04NDU0LWRmYzI2ODYzMGMyYQ.jpg)
+
+就像你手被针刺了一下立马会缩回一样，**我们承受着因自尊受到威胁而带来的痛苦时，就会去想办法摆脱这种痛苦**，这是生命体在应激状态下的本能反应。**大多数人会尽力去维护自尊，以及保持自我概念的完整性**。人们会采取多种形式来提高自尊，我们无意识地与比自己差的人比较或者和自己相近的人的某一较弱的方面比较，就是为了提高我们的自尊**，我们会随着别人对我们的期望调整我们的行为、即使听力不好也不会主动佩戴助听器，这些都是**为了避免别人对我们做出负面的评价，从而伤害了我们的自尊。当你担心自己没有能力完成某项任务时，也许会采用自我妨碍行为，你在故意破坏你的任务完成（考试前本应该复习的你却和好友一起出去逛街），这种策略是在为失败准备托词：**这不意味着我没有能力，是因为我没有好好复习。**我们渴望自尊，因为它能激励我们不断前进和成长。
+
+现在让我们再从头理一遍：**我们如此关注自我，时刻监视自己的行为就是为了控制别人可能对我们做出的评价，而我们从别人那里获得的评价又组成了我们对自己的认识，我们对自己的认识又决定了我们自己对自我价值的总体评价，而我们对高自我价值感的追求又迫使我们时刻监视自己的行为；并且我们的自我价值感又强烈地影响了我们的思维、情绪和行为，从而在人生更大的层面产生作用。**简单地说，**别人的评价会影响到我们的自尊甚至人生，而我们对自尊的渴望又放大了这种影响。**
+
+**所以，你应该怎样去面对别人的评价？**
+
+要知道，**他人对你的评价并不一定是正确的。**我们人类对事物的判断不仅受事物呈现或者被描述的方式影响，还受自己信念、情绪、偏见、认知失调以及自我服务偏差等众多因素的局限，这还不排除别人有意为之。
