--- a/两张地球照片带来的震撼.md
+++ b/两张地球照片带来的震撼.md
@@ -2,4 +2,13 @@
 
 几乎每个人都学过，大地是一个圆球，我们都由重力吸附在它上面。但很少有人对自己居住的世界有清晰的意识。
 
-![](https://en.wikipedia.org/wiki/Apollo_4#/media/File:Apollo_4_liftoff_-_GPN-2006-000038.jpg)
+肯尼迪1961年的"国家的紧迫需要"演讲让整个美国兴奋了起来，里面提到了很多让人印象深刻的远景计划，包括注入大量资源的Apollo计划。但在关于探月计划的内容中，没有一个字是和科学有关的，没有关于对月球起源的探索或是带回样品进行分析的想法，他似乎只关心把一个人送上月球然后接回来。那么Apollo计划是为了什么？空间技术有什么特殊之处?
+
+![](https://upload.wikimedia.org/wikipedia/commons/e/e7/Apollo_4_liftoff_-_GPN-2006-000038.jpg)
+
+实际上不需要任何人作解释，只需要看看助推火箭的样子就一清二楚了。把人送人绕地球的轨道，或者把机器人送人绕太阳的轨道，都需要火箭—需要巨型、可靠又强有力的火箭。同样的火箭可以在核战争中使用。用把人送上月球的技术，同样也能够把核弹头发射到半个地球之外的目标。把一位天文学家和一架望远镜送人绕地轨道的技术，同样也可用于运载激光“作战装置”。甚至回溯当年，在东方和西方的军界人士中都有一些富于幻想的言论，诸如把太空当作居高临下的新“制高点”，哪个国家“控制了”太空，就能“控制”地球。当然，那时战略性火箭已经在地球上多次试验过了。但是把一枚装有模拟核弹头的弹道导弹打到太平洋中部的一个靶区，并不显得多么荣耀，而把人送进太空却会赢得全世界的关注并唤起大众的想象力。
+
+Apollo计划的主旨不是科学，甚至也不是太空。Apollo计划代表的是意识形态对抗和核战争。它原本就是为了展示超级大国的实力以及战术导弹的精度。经常采用的委婉说法是世界的“领导地位”及国家的“威望”。
+
+意外的收获是，Apollo的宇航员们在飞往月球的途中都拍摄了他们的家园——地球的照片。这是当然要做的事情，但是这产生了很少有人能预料的结果。地球上的居民破天荒第一次从天上看见了他们的世界——完整的地球，彩色的地球，以及在辽阔的漆黑太空背景中呈现为不断自转着的，蓝白相间的精致小球的地球。这些照片有助于唤醒我们对行星的迷糊意识。它们提供无可争辩的证据，表明我们大家同在一颗脆弱的行星上面。
+
