--- a/两张地球照片带来的震撼.md
+++ b/两张地球照片带来的震撼.md
@@ -38,9 +38,9 @@ Carl Edward Sagan曾是旅行者号影像小组的一员。旅行者号拍摄的
 
 Carl Edward Sagan有感而发，写下了下面一段话：
 
-〉再看看那个光点，它就在这里。那是家园，那是我们，在那里，你所爱的每个人，你认识的每一个人，你听说过的每一个人，在这个世上存在过的每个人，都在它上面度过了他们的一生。聚集在这里的是我们的欢乐和痛苦，是成千上万的自以为是的宗教信仰、意识形态和经济学说，每一个猎手与觅食者，每一个英雄与懦夫，每一个文明的创立者和毁灭者，每一个国王与农夫，每一对年轻的情侣，每一个母亲与父亲，充满希望的孩子们，发明家与探险家，每一位德高望重的教师，每一位贪婪的政客，每一个超级明星，每一个最高领袖，人类史上的每一位圣人和罪人，都生活在这里，如一粒微尘，悬浮在一束阳光之中，地球是在浩瀚宇宙背景下的一个很小的舞台。想想过去的血流成河，那为帝王将相而流的血，只为让他们在光荣和胜利中成为瞬时的伟人，占有那一个小点中的那一小部分。想想那无尽的残酷，图像里那一个像素点的某个角落的民众，每天把这些残酷施加到与他们没什么区别的另一个角落的民众身上。他们为何常常误解，他们为何渴望杀死对方，他们的仇恨为何如此狂热。我们在装模做样，我们自以为很重要，妄想着我们人类地位特殊，在宇宙中与众不同。这一切，都因这泛着苍白蓝光的小点而动摇。我们的星球，不过是一粒孤独的微尘，笼罩在伟大的宇宙黑暗之中，我们默默无闻，沉浸在无尽的浩瀚里。 
+> 看看那个光点，它就在这里。那是家园，那是我们，在那里，你所爱的每个人，你认识的每一个人，你听说过的每一个人，在这个世上存在过的每个人，都在它上面度过了他们的一生。聚集在这里的是我们的欢乐和痛苦，是成千上万的自以为是的宗教信仰、意识形态和经济学说，每一个猎手与觅食者，每一个英雄与懦夫，每一个文明的创立者和毁灭者，每一个国王与农夫，每一对年轻的情侣，每一个母亲与父亲，充满希望的孩子们，发明家与探险家，每一位德高望重的教师，每一位贪婪的政客，每一个超级明星，每一个最高领袖，人类史上的每一位圣人和罪人，都生活在这里，如一粒微尘，悬浮在一束阳光之中，地球是在浩瀚宇宙背景下的一个很小的舞台。想想过去的血流成河，那为帝王将相而流的血，只为让他们在光荣和胜利中成为瞬时的伟人，占有那一个小点中的那一小部分。想想那无尽的残酷，图像里那一个像素点的某个角落的民众，每天把这些残酷施加到与他们没什么区别的另一个角落的民众身上。他们为何常常误解，他们为何渴望杀死对方，他们的仇恨为何如此狂热。我们在装模做样，我们自以为很重要，妄想着我们人类地位特殊，在宇宙中与众不同。这一切，都因这泛着苍白蓝光的小点而动摇。我们的星球，不过是一粒孤独的微尘，笼罩在伟大的宇宙黑暗之中，我们默默无闻，沉浸在无尽的浩瀚里。 
 
-> 我们的心情，我们虚构的妄自尊大，我们在宇宙中拥有某种特权地位的错觉，都受到这个苍白光点的挑战。在庞大的包容一切的暗黑宇宙中，我们的行星是一个孤独的斑点。由于我们的低微地位和广阔无垠的空间，没有任何暗示，从别的什么地方会有救星来拯救我们脱离自己的处境。地球是目前已知存在生命的唯一世界。
+>我们的心情，我们虚构的妄自尊大，我们在宇宙中拥有某种特权地位的错觉，都受到这个苍白光点的挑战。在庞大的包容一切的暗黑宇宙中，我们的行星是一个孤独的斑点。由于我们的低微地位和广阔无垠的空间，没有任何暗示，从别的什么地方会有救星来拯救我们脱离自己的处境。地球是目前已知存在生命的唯一世界。
 
 > 有人说过，天文学令人感到自卑并能培养个性。除掉我们小小世界的这个远方图象外，大概没有别的更好办法可以揭示人类妄自尊大是何等愚蠢。
 
