--- a/两张地球照片带来的震撼.md
+++ b/两张地球照片带来的震撼.md
@@ -6,7 +6,7 @@
 
 ![](https://upload.wikimedia.org/wikipedia/commons/e/e7/Apollo_4_liftoff_-_GPN-2006-000038.jpg)
 
-实际上不需要任何人作解释，只需要看看助推火箭的样子就一清二楚了。把人送人绕地球的轨道，或者把机器人送人绕太阳的轨道，都需要火箭—需要巨型、可靠又强有力的火箭。同样的火箭可以在核战争中使用。用把人送上月球的技术，同样也能够把核弹头发射到半个地球之外的目标。把一位天文学家和一架望远镜送人绕地轨道的技术，同样也可用于运载激光“作战装置”。甚至回溯当年，在东方和西方的军界人士中都有一些富于幻想的言论，诸如把太空当作居高临下的新“制高点”，哪个国家“控制了”太空，就能“控制”地球。当然，那时战略性火箭已经在地球上多次试验过了。但是把一枚装有模拟核弹头的弹道导弹打到太平洋中部的一个靶区，并不显得多么荣耀，而把人送进太空却会赢得全世界的关注并唤起大众的想象力。
+实际上不需要任何人作解释，只需要看看助推火箭的样子就一清二楚了。把人送人绕地球的轨道，或者把机器人送入绕太阳的轨道，都需要火箭—需要巨型、可靠又强有力的火箭。同样的火箭可以在核战争中使用。用把人送上月球的技术，同样也能够把核弹头发射到半个地球之外的目标。把一位天文学家和一架望远镜送入绕地轨道的技术，同样也可用于运载激光“作战装置”。甚至回溯当年，在东方和西方的军界人士中都有一些富于幻想的言论，诸如把太空当作居高临下的新“制高点”，哪个国家“控制了”太空，就能“控制”地球。当然，那时战略性火箭已经在地球上多次试验过了。但是把一枚装有模拟核弹头的弹道导弹打到太平洋中部的一个靶区，并不显得多么荣耀，而把人送进太空却会赢得全世界的关注并唤起大众的想象力。
 
 Apollo计划的主旨不是科学，甚至也不是太空。Apollo计划代表的是意识形态对抗和核战争。它原本就是为了展示超级大国的实力以及战术导弹的精度。经常采用的委婉说法是世界的“领导地位”及国家的“威望”。
 
