--- a/两张地球照片给人类带来的震撼.md
+++ b/两张地球照片给人类带来的震撼.md
@@ -2,39 +2,39 @@
 
 几乎每个人都学过，大地是一个圆球，我们都由重力吸附在它上面。但很少有人对自己居住的世界有清晰的意识。
 
-肯尼迪1961年的"国家的紧迫需要"演讲让整个美国兴奋了起来，里面提到了很多让人印象深刻的远景计划，包括注入大量资源的Apollo计划。但在关于探月计划的内容中，没有一个字是和科学有关的，没有关于对月球起源的探索或是带回样品进行分析的想法，他似乎只关心把一个人送上月球然后接回来。那么Apollo计划是为了什么？空间技术有什么特殊之处?
+肯尼迪1961年的"国家的紧迫需要"演讲让整个美国兴奋了起来，里面提到了很多让人印象深刻的远景计划，包括注入大量资源的Apollo计划。但**关于探月计划的内容中，没有一个字是和科学有关的**，没有关于对月球起源的探索或是带回样品进行分析的想法，他似乎只关心把一个人送上月球然后接回来。那么Apollo计划是为了什么？空间技术有什么特殊之处?
 
 ![](https://upload.wikimedia.org/wikipedia/commons/e/e7/Apollo_4_liftoff_-_GPN-2006-000038.jpg)
 
-实际上不需要任何人作解释，只需要看看助推火箭的样子就一清二楚了。把人送人绕地球的轨道，或者把机器人送入绕太阳的轨道，都需要火箭—需要巨型、可靠又强有力的火箭。同样的火箭可以在核战争中使用。用把人送上月球的技术，同样也能够把核弹头发射到半个地球之外的目标。把一位天文学家和一架望远镜送入绕地轨道的技术，同样也可用于运载激光“作战装置”。甚至回溯当年，在东方和西方的军界人士中都有一些富于幻想的言论，诸如把太空当作居高临下的新“制高点”，哪个国家“控制了”太空，就能“控制”地球。当然，那时战略性火箭已经在地球上多次试验过了。但是把一枚装有模拟核弹头的弹道导弹打到太平洋中部的一个靶区，并不显得多么荣耀，而把人送进太空却会赢得全世界的关注并唤起大众的想象力。
+实际上不需要任何人作解释，只需要看看助推火箭的样子就一清二楚了。**把人送人绕地球的轨道，或者把机器人送入绕太阳的轨道，都需要火箭—需要巨型、可靠又强有力的火箭。同样的火箭可以在核战争中使用。**用把人送上月球的技术，同样也能够把核弹头发射到半个地球之外的目标。把一位天文学家和一架望远镜送入绕地轨道的技术，同样也可用于运载激光“作战装置”。甚至回溯当年，在东方和西方的军界人士中都有一些富于幻想的言论，诸如把太空当作居高临下的新“制高点”，哪个国家“控制了”太空，就能“控制”地球。当然，那时战略性火箭已经在地球上多次试验过了。但是**把一枚装有模拟核弹头的弹道导弹打到太平洋中部的一个靶区，并不显得多么荣耀，而把人送进太空却会赢得全世界的关注并唤起大众的想象力**。
 
-Apollo计划的主旨不是科学，甚至也不是太空。Apollo计划代表的是意识形态对抗和核战争。它原本就是为了展示超级大国的实力以及战术导弹的精度。经常采用的委婉说法是世界的“领导地位”及国家的“威望”。
+**Apollo计划的主旨不是科学，甚至也不是太空。**Apollo计划代表的是意识形态对抗和核战争。它原本就是为了展示超级大国的实力以及战术导弹的精度。经常采用的委婉说法是世界的**“领导地位”**及**国家的“威望”**。
 
-意外的收获是，Apollo的宇航员们在飞往月球的途中都拍摄了他们的家园——地球的照片。这是当然要做的事情，但是这产生了很少有人能预料的结果。地球上的居民破天荒第一次从天上看见了他们的世界——完整的地球，彩色的地球，以及在辽阔的漆黑太空背景中呈现为不断自转着的，蓝白相间的精致小球的地球。这些照片有助于唤醒我们对行星的迷糊意识。它们提供无可争辩的证据，表明我们大家同在一颗脆弱的行星上面。
+意外的收获是，Apollo的宇航员们在飞往月球的途中都拍摄了他们的家园——地球的照片。这是当然要做的事情，但是这产生了很少有人能预料的结果。**地球上的居民破天荒第一次从天上看见了他们的世界——完整的地球，彩色的地球，以及在辽阔的漆黑太空背景中呈现为不断自转着的，蓝白相间的精致小球的地球。这些照片有助于唤醒我们对行星的迷糊意识。**它们提供无可争辩的证据，表明我们大家同在一颗脆弱的行星上面。
 
 ![](http://rlv.zcache.com/the_blue_marble_earth_seem_from_apollo_17_postcard-ra342f07ca6264d72bd6e02f659bb43b2_vgbaq_8byvr_630.jpg?view_padding=[285,0,285,0])
 
-这是一个没有边界的行星，它成为了一种新意识的象征。这张照片可说是已经成为当代的一幅圣像。我们所在世界的真实情景，却直到Apollo对整个地球拍摄了一幅装满镜框的著名照片后才真正看清。此照上面有南极，这是欧洲人与美洲人都乐意把它当作底部的地方。此外，整个非洲在照片上面展现出来:你可以看到最早的人类居住过的埃塞俄比亚、坦桑尼亚与肯尼亚。右上方是欧洲人称之为近东的沙特阿拉伯，在顶端是勉强可以看出的地中海，整个世界的文明有很大一部分都在它的周围出现。你能够辨认出海洋的蓝色，撒哈拉和阿拉伯沙漠的黄红色，以及森林与草原的褐绿色。
+这是一个没有边界的行星，它成为了一种新意识的象征。这张照片可说是已经成为当代的一幅圣像。**我们所在世界的真实情景，却直到Apollo对整个地球拍摄了一幅装满镜框的著名照片后才真正看清。**此照上面有南极，这是欧洲人与美洲人都乐意把它当作底部的地方。此外，整个非洲在照片上面展现出来:你可以看到最早的人类居住过的埃塞俄比亚、坦桑尼亚与肯尼亚。右上方是欧洲人称之为近东的沙特阿拉伯，在顶端是勉强可以看出的地中海，整个世界的文明有很大一部分都在它的周围出现。你能够辨认出海洋的蓝色，撒哈拉和阿拉伯沙漠的黄红色，以及森林与草原的褐绿色。
 
-然而，在这张照片上没有人类的迹象，看不出我们对地球表面的改造，也看不到我们的机器和我们自身。我们太微小，以致于在位于地球与月球之间的空间飞船上看不出来。从这个位置看来，我们的民族主义情感在任何地方都不明显。整个地球的“Apollo”照片告诉广大群众:在行星的尺度上说(更不用谈恒星与星系了)，人类是微不足道的，它只不过是在一块偏僻与孤独的岩石和金属混合体上面的一薄层生命。
+然而，在这张照片上没有人类的迹象，看不出我们对地球表面的改造，也看不到我们的机器和我们自身。**我们太微小，以致于在位于地球与月球之间的空间飞船上看不出来。**从这个位置看来，我们的民族主义情感在任何地方都不明显。整个地球的“Apollo”照片告诉广大群众:在行星的尺度上说(更不用谈恒星与星系了)，人类是微不足道的，它只不过是在一块偏僻与孤独的岩石和金属混合体上面的一薄层生命。
 
-是不是很讽刺？在军事竞赛的道路上，我们回望家园，却发现了另一个世界。这张照片很及时 ，正当我们的科技对我们生存在这个世界上构成威胁的时候。不管Apollo计划原先发起的理由是什么，也无论冷战时期的人们是如何深陷民族主义的思潮以及对杀人武器的追求，我们仍不可避免地认识到了地球是脆弱而不可分割的统一体。每一个文明都是它的组成部分。这是Apollo计划的意外收获，一个致力于死亡竞赛的项目，让我们认识到了这个地球共同体。
+是不是很讽刺？**在军事竞赛的道路上，我们回望家园，却发现了另一个世界。这张照片很及时 ，正当我们的科技对我们生存在这个世界上构成威胁的时候。不管Apollo计划原先发起的理由是什么，也无论冷战时期的人们是如何深陷民族主义的思潮以及对杀人武器的追求，我们仍不可避免地认识到了地球是脆弱而不可分割的统一体。每一个文明都是它的组成部分。**这是Apollo计划的意外收获，一个致力于死亡竞赛的项目，让我们认识到了这个地球共同体。
 
 对于我们进一步了解我们的真正环境和情况，有必要看一看比这远出千万倍的地方拍摄的另一张地球的照片。古代的科学家和哲学家就已熟知，在浩瀚的、无所不包的宇宙中，地球只是一小点，可是谁也没有看见过像这样的地球。我们需要有一次从深空回望地球家园的机会。
 
-由政府制造的任何东西都会成为一场灾难，这在现今已经是习以为常的看法了。可是两个“旅行者号”航天器是由（美国）政府研制的。这些优良的机器并不是要控制、威胁、伤害或者摧毁什么东西，它们代表我们本性中想寻根究底的成分，想要自由自在地遨游太阳系和更遥远的太空。有人厌恶美国的大部分政策，也有人赞同它的一切;但是对行星的探测，是对全人类做得最好的事情之一。
+**由政府制造的任何东西都会成为一场灾难**，这在现今已经是习以为常的看法了。可是两个“旅行者号”航天器是由（美国）政府研制的。这些优良的机器并不是要控制、威胁、伤害或者摧毁什么东西，它们代表我们本性中想寻根究底的成分，想要自由自在地遨游太阳系和更遥远的太空。有人厌恶美国的大部分政策，也有人赞同它的一切;但是对行星的探测，是对全人类做得最好的事情之一。
 
 ![Voyager](https://upload.wikimedia.org/wikipedia/commons/2/29/Voyager_spacecraft.jpg)
 
-“旅行者1号”和“旅行者2号”是为人类敞开太阳系，并为子孙后代开辟新途径的两艘飞船。在它们于1977年8月和9月发射之前，我们对太阳系的行星部分几乎是一无所知。旅行者号向我们提供第一批关于许多新世界的详尽资料与特写镜头，而过去在地面望远镜的目镜中，这些新世界有的看起来是模糊的圆面，有的仅是光点，而对有一些连它们的存在都还没有猜想到过。
+“旅行者1号”和“旅行者2号”是为人类敞开太阳系，并为子孙后代开辟新途径的两艘飞船。在它们于1977年8月和9月发射之前，我们对太阳系的行星部分几乎是一无所知。旅行者号向我们提供第一批关于许多新世界的详尽资料与特写镜头，而过去在地面望远镜的目镜中，这些新世界有的看起来是模糊的圆面，有的仅是光点，而对有一些**连它们的存在都还没有猜想到过**。
 
-Carl Edward Sagan曾是旅行者号影像小组的一员。旅行者号拍摄的最后一张照片来自于他的想法。由于从太阳系外围看来，地球靠太阳很近，就像一只绕着火光飞的飞蛾，拍摄任务会使视象管被烧毁。所以从1981年一直等到1989年两艘旅行者飞船拍完了所以计划要拍的照片，才开始拍这张照片。在旅行者一号飞过海王星时，镜头转回地球，让它最后看一眼家园，拍到了这张照片：在行星周围以及散布在遥远恒星背景上的方形镶嵌图上。
+**Carl Edward Sagan**曾是旅行者号影像小组的一员。旅行者号拍摄的最后一张照片来自于他的想法。由于从太阳系外围看来，地球靠太阳很近，就像一只绕着火光飞的飞蛾，拍摄任务会使视象管被烧毁。所以从1981年一直等到1989年两艘旅行者飞船拍完了所以计划要拍的照片，才开始拍这张照片。在旅行者一号飞过海王星时，镜头转回地球，让它最后看一眼家园，拍到了这张照片：在行星周围以及散布在遥远恒星背景上的方形镶嵌图上。
 
 ![](https://upload.wikimedia.org/wikipedia/commons/7/73/Pale_Blue_Dot.png)
 
-从这样远的地方来看，行星只是一些模糊或不模糊的光点。它们就像在地球表面用肉眼看到光点一样。由于太阳光在空间飞船上面反射，地球好像位于一束光线中，对这个小小的世界，这似乎有某种特殊的含义。但这仅是几何学和光学原因造成的事故。太阳在各个方向上均匀地发出辐射。如果拍照的时间早了一点或迟了一点，就不会有太阳光强烈照射在地球上。
+**从这样远的地方来看，行星只是一些模糊或不模糊的光点。它们就像在地球表面用肉眼看到光点一样。**由于太阳光在空间飞船上面反射，地球好像位于一束光线中，对这个小小的世界，这似乎有某种特殊的含义。但这仅是几何学和光学原因造成的事故。太阳在各个方向上均匀地发出辐射。如果拍照的时间早了一点或迟了一点，就不会有太阳光强烈照射在地球上。
 
-单纯靠观看这些光点中的一个，你完全不能说出它是什么，它上面有什么，它过去情况如何，以及目前那里有没有人居住。假如一艘外来的空间飞船，在经历漫长的星际航行后接近太阳系时，它所看到的行星图象就是这样。看起来地球和其他光点并没有区别。但是对我们情况就不同了。
+**单纯靠观看这些光点中的一个，你完全不能说出它是什么，它上面有什么，它过去情况如何，以及目前那里有没有人居住。假如一艘外来的空间飞船，在经历漫长的星际航行后接近太阳系时，它所看到的行星图象就是这样。看起来地球和其他光点并没有区别。**但是对我们情况就不同了。
 
 Carl Edward Sagan有感而发，写下了下面一段话：
 
@@ -46,6 +46,6 @@ Carl Edward Sagan有感而发，写下了下面一段话：
 
 ![](https://upload.wikimedia.org/wikipedia/commons/6/62/Starsinthesky.jpg)
 
-Ann Druyan建议做一个实验:再一次回头看看上图淡蓝色光点。好好地看着它。随便你凝视它多久，于是就竭力使你自己相信，上帝是为了居住在这粒尘埃上约1 000万种生物中的一种而创造了整个宇宙。现在更进一步:设想一切事物都只是为了这种生物的个别生灵，或人类两性之一，或某种族或某宗教教派而创造出来的。如果这并不使你感到靠不住，那就另取一个光点吧。设想它上面居住着另一种形式的智慧生命。他们也坚持有一个上帝为他们的利益创造了一切。你又会如何对待他们的可爱想法?
+Ann Druyan建议做一个实验:再一次回头看看上图淡蓝色光点。好好地看着它。随便你凝视它多久，于是就竭力使你自己相信，**上帝是为了居住在这粒尘埃上约1 000万种生物中的一种而创造了整个宇宙。现在更进一步:设想一切事物都只是为了这种生物的个别生灵，或人类两性之一，或某种族或某宗教教派而创造出来的。**如果这并不使你感到靠不住，那就另取一个光点吧。设想它上面居住着另一种形式的智慧生命。他们也坚持有一个上帝为他们的利益创造了一切。你又会如何对待他们的可爱想法?
 
-人类的自大，是因为视野太渺小。
+**人类的自大，是因为视野太渺小。**
