--- a/意义.md
+++ b/意义.md
@@ -1,1 +1,11 @@
-# 意义
+# 意义 | 从造物到人生
+
+1966年，距人们初次摒弃地球是宇宙中心的观念已经过去几百年，就在那个本身很普通的八月， NASA的宇宙飞船在月球轨道上拍摄到了一幅划时代的地球图像，就像我们夜晚看到的月亮一样，地球从月球的地平线上升起。人类见到过日出和月出，但是从来没有见到过“地出”。这是一种既富有启示又令人谦卑的体验。很多人把这张照片当作时代的圣像，因为这样一个视角迫使人类思考关于我们自身更深层的意义。
+
+!()[https://upload.wikimedia.org/wikipedia/commons/a/a8/NASA-Apollo8-Dec24-Earthrise.jpg]
+
+## 你我皆星尘
+
+人类身体大约93%的质量仅由三种元素构成：氧、碳、氢。氧和氢主要以水的形式存在，它组成了体重的70%。碳或许是生命最重要的元素，它能很容易与其他原子结合，这允许它形成又长又复杂的分子链，进而形成了你身体坚实的那一部分。剩余7%就是元素周期表的一次旅行了。这些元素起着各种各样的作用：例如运输氧，塑造骨骼和细胞结构，传递信号，驱使化学反应，等等。
+
+这些原子最初来自哪里？这要追溯至宇宙之初，那时时间还没有开始，空间在密度极大温度极高的状态下爆炸，由此开始了宇宙的扩张，并诞生了所有的能量。此时宇宙主要是氢和氦。万有引力将气体集聚并且加热，直到第一批恒星发出亮光，之后这些恒星开始聚集，形成第一批小星系。
