--- a/意义.md
+++ b/意义.md
@@ -1,6 +1,6 @@
 # 意义 | 从造物到人生
 
-1966年，距人们初次摒弃地球是宇宙中心的观念已经过去几百年，就在那个本身很普通的八月， NASA的宇宙飞船在月球轨道上拍摄到了一幅划时代的地球图像，就像我们夜晚看到的月亮一样，地球从月球的地平线上升起。人类见到过日出和月出，但是从来没有见到过“地出”。这是一种既富有启示又令人谦卑的体验。很多人把这张照片当作时代的圣像，因为这样一个视角迫使人类思考关于我们自身更深层的意义。
+1966年，距人们初次摒弃地球是宇宙中心的观念已经过去几百年，就在那个本身很普通的八月，NASA的宇宙飞船在月球轨道上拍摄到了一幅划时代的地球图像，**就像我们夜晚看到的月亮一样，地球从月球的地平线上升起。人类见到过日出和月出，但是从来没有见到过“地出”。这是一种既富有启示又令人谦卑的体验。**很多人把这张照片当作时代的圣像，因为这样一个视角迫使人类思考关于我们自身更深层的意义。
 
 ![](https://upload.wikimedia.org/wikipedia/commons/a/a8/NASA-Apollo8-Dec24-Earthrise.jpg)
 
@@ -8,65 +8,65 @@
 
 人类身体大约93%的质量仅由三种元素构成：氧、碳、氢。氧和氢主要以水的形式存在，它组成了体重的70%。碳或许是生命最重要的元素，它能很容易与其他原子结合，这允许它形成又长又复杂的分子链，进而形成了你身体坚实的那一部分。剩余7%就是元素周期表的一次旅行了。这些元素起着各种各样的作用：例如运输氧，塑造骨骼和细胞结构，传递信号，驱使化学反应，等等。
 
-这些原子最初来自哪里？这要追溯至宇宙之初，那时时间还没有开始，空间在密度极大温度极高的状态下爆炸，由此开始了宇宙的扩张，并诞生了所有的能量。此时宇宙主要是氢和氦。万有引力将气体集聚并且加热，直到第一批恒星发出亮光，之后这些恒星开始聚集，形成第一批小星系。
+这些原子最初来自哪里？这要追溯至宇宙之初，那时时间还没有开始，空间在密度极大温度极高的状态下爆炸，由此开始了宇宙的扩张，并诞生了所有的能量。**此时宇宙主要是氢和氦。万有引力将气体集聚并且加热，直到第一批恒星发出亮光，之后这些恒星开始聚集，形成第一批小星系。**
 
-那时宇宙就像一个大熔炉，轻元素在炙热的恒星内部不断地被融合成重元素。那些恒星，尤其是质量高的，在即将寿终正寝时很不稳定，当他们爆炸后，将充满各种物质的尘埃云散落在星系间，这些尘埃内部充满了我们呼吸的氧、肌肉中的碳、骨头中的钙、血中的铁，以及所有生命起源所必须的基本元素。它们不知道在太空中漂泊了多少年直到它们到达另一片正在慢慢形成恒星云的新星云，这些尘埃云再经过压缩、坍塌，形成新一代的恒星系统（比如我们的太阳系）。曾经在恒星内部的元素形成了行星，而那些拥有着生命构成要素的行星就成了生命的温床。
+那时宇宙就像一个大熔炉，**轻元素在炙热的恒星内部不断地被融合成重元素**。那些恒星，尤其是质量高的，在即将寿终正寝时很不稳定，当他们爆炸后，将充满各种物质的尘埃云散落在星系间，**这些尘埃内部充满了我们呼吸的氧、肌肉中的碳、骨头中的钙、血中的铁，以及所有生命起源所必须的基本元素。**它们不知道在太空中漂泊了多少年直到它们到达另一片正在慢慢形成恒星云的新星云，这些尘埃云再经过压缩、坍塌，形成新一代的恒星系统（比如我们的太阳系）。曾经在恒星内部的元素形成了行星，而那些拥有着生命构成要素的行星就成了生命的温床。
 
-仰望星空，最让你感动的是什么？构成我们的那些原子正是来自那些星辰，我们之间存在着某种联系。不知道这意味着什么，或者它是否有什么意味。人们总觉得相比浩瀚华丽的宇宙自己如此渺小。可当我们注意太空时，我们也是在寻找自己的起源，因为我们是恒星的孩子，注入进我们身体的每一个原子和分子，就是从宇宙大爆炸到现在全部的历史。每个人、你所热爱的一切，你所憎恨的一切，你所拥有的最宝贵的东西，都是在宇宙演化的进程中由自然的力量合成，在恒星的中心转化或在它们燃烧的消亡中诞生。
+仰望星空，最让你感动的是什么？**构成我们的那些原子正是来自那些星辰，我们之间存在着某种联系。不知道这意味着什么，或者它是否有什么意味。人们总觉得相比浩瀚华丽的宇宙自己如此渺小。可当我们注意太空时，我们也是在寻找自己的起源，因为我们是恒星的孩子，注入进我们身体的每一个原子和分子，就是从宇宙大爆炸到现在全部的历史。**每个人、你所热爱的一切，你所憎恨的一切，你所拥有的最宝贵的东西，都是在宇宙演化的进程中由自然的力量合成，在恒星的中心转化或在它们燃烧的消亡中诞生。
 
 人类的祖先以神灵和组成万物的元素名来命名天空中的星星，今天看来这是一个惊人的充满哲学意味的巧合。 在某种程度上，恒星就像上帝，它们是造物主，创造一个地球，需要几百代的恒星诞生和消亡。
 
-你我皆星尘，或者不那么浪漫地说，你我都是核废料。
+**你我皆星尘，或者不那么浪漫地说，你我都是核废料。**
 
 ## 生命的起源
 
-就在45亿年前，像太阳系中其他的行星一样，地球在一堆气体和恒星的灰烬中产生，绕着新生的太阳运行。差不多在35亿年前，生命就在这个小世界上的某个角落里诞生了。人们认为有机物是特殊的稀有的，它们被称为生命的物质，这可能和人类发现有机物的过程有关。当然，我们过去探索世界的成功经验，会阻碍我们对宇宙的正确认识。在内太阳系，辐射太强烈，几乎所有有机物都不能稳定存在。但是在太阳辐射很弱的外太阳系，有机物到处都是，土星最大的卫星Titan上存在着有机物组成的巨大海洋，彗星就是从太阳系外围飘过来的，我们在彗星蒸发出的碎屑里发现了氨基酸。大多数文明都认为彗星的出现是不详的征兆，预示着即将有洪水或者帝王要驾崩，但可能正是这些“扫把星”给初生的地球带来了生命的原材料。
+就在45亿年前，像太阳系中其他的行星一样，地球在一堆气体和恒星的灰烬中产生，绕着新生的太阳运行。差不多在35亿年前，生命就在这个小世界上的某个角落里诞生了。人们认为有机物是特殊的稀有的，它们被称为生命的物质，这可能和人类发现有机物的过程有关。当然，我们过去探索世界的成功经验，会阻碍我们对宇宙的正确认识。在内太阳系，辐射太强烈，几乎所有有机物都不能稳定存在。但是在太阳辐射很弱的外太阳系，有机物到处都是，土星最大的卫星Titan上存在着有机物组成的巨大海洋，彗星就是从太阳系外围飘过来的，我们在彗星蒸发出的碎屑里发现了氨基酸。**大多数文明都认为彗星的出现是不详的征兆，预示着即将有洪水或者帝王要驾崩，但可能正是这些“扫把星”给初生的地球带来了生命的原材料。**
 
-生命不是什么神圣的东西，而是一系列的化学变化利用能量的流动创造出秩序井然的个体，生命向广袤的宇宙借取秩序，通过DNA发生的精巧化学变化，代代相传。人类的身体处于不停息的改变之中。每过16天，你身体的70%已经被替换，因为一个健康的人在这段时间里已经交换了体内100%的水。每年你体内98%的原子都要被替换成新的，每过五年几乎构成你身体的所有原子都不再是5年前的原子，所以你可以把自己叫做原子的短暂集合体。当你死后，当地球被膨胀的太阳吞噬，这些原子将回到宇宙中，进入无限的死亡又重生的轮回之中。
+**生命不是什么神圣的东西，而是一系列的化学变化利用能量的流动创造出秩序井然的个体，生命向广袤的宇宙借取秩序，通过DNA发生的精巧化学变化，代代相传。**人类的身体处于不停息的改变之中。每过16天，你身体的70%已经被替换，因为一个健康的人在这段时间里已经交换了体内100%的水。每年你体内98%的原子都要被替换成新的，每过五年几乎构成你身体的所有原子都不再是5年前的原子，所以**你可以把自己叫做原子的短暂集合体。当你死后，当地球被膨胀的太阳吞噬，这些原子将回到宇宙中，进入无限的死亡又重生的轮回之中。**
 
-现代科学认为只要有有机物、水，离太阳距离适当就可以诞生生命，或者我们可以更成熟一点说，只要有可以组成生命的物质、合适的溶剂和能量就可以诞生出生命。生命的出现并不是神秘力量导致的偶然事件，地球之所以出现生命，是因为遵循物理定律所产生的必然结果。如果生命这样诞生，那么在拥有相似环境的其他世界是不是也可以自然诞生？
+现代科学认为只要有有机物、水，离太阳距离适当就可以诞生生命，或者我们可以更成熟一点说，**只要有可以组成生命的物质、合适的溶剂和能量就可以诞生出生命。生命的出现并不是神秘力量导致的偶然事件，地球之所以出现生命，是因为遵循物理定律所产生的必然结果。**如果生命这样诞生，那么在拥有相似环境的其他世界是不是也可以自然诞生？
 
-我们头顶上的星空中，那些隐藏在黑暗中的星系和星云，恒星与行星，它们之中是不是偶尔也会诞生出拥有复杂形态的生命。他们在孕育自己星球上的角落里适应环境，改造自然，观察了解宇宙的规律，与时间进行博弈，雕刻着属于他们的历史，或者说默默无闻地述说着，因为总有一天这些会消失，就像它从没存在过一样。
+**我们头顶上的星空中，那些隐藏在黑暗中的星系和星云，恒星与行星，它们之中是不是偶尔也会诞生出拥有复杂形态的生命。**他们在孕育自己星球上的角落里适应环境，改造自然，观察了解宇宙的规律，与时间进行博弈，雕刻着属于他们的历史，或者说默默无闻地述说着，因为总有一天这些会消失，就像它从没存在过一样。
 
 ## 文明的开端
 
-我们依然不知道生命如何起源，我们就像被丢弃在宇宙的孤儿，对自己的过去和未来完全不清楚。但可以肯定，生命不是出于某种目的被创造出来的，而是宇宙演化的偶然产物。人类的出现更是偶然中的偶然。
+**我们依然不知道生命如何起源，我们就像被丢弃在宇宙的孤儿，对自己的过去和未来完全不清楚。**但可以肯定，生命不是出于某种目的被创造出来的，而是宇宙演化的偶然产物。人类的出现更是偶然中的偶然。
 
-恐龙统治了地球大约8000万年，它们遍布全球，让一切生物畏惧，但就在6500万年前的白垩纪结束的时候突然全部消失。大量证据表明，恐龙的灭绝因为小行星撞击地球。毁灭恐龙的小行星之所以能来到地球，可能只是在太阳系形成初期因为旁边的小行星引力作用而偏离了角度。如果它没有被推动，它会完全和地球擦肩而过，恐龙依然生活在地球上，我们的祖先还颤颤兢兢地爬行在恐龙的脚下。这是一个生存偶然性的极好例子，这颗小行星改变了一切，不是因为这个偶然的推动，我们至今还不存在。 恐龙的灭绝为哺乳动物留下了巨大的生存空间。
+恐龙统治了地球大约8000万年，它们遍布全球，让一切生物畏惧，但就在6500万年前的白垩纪结束的时候突然全部消失。大量证据表明，恐龙的灭绝因为小行星撞击地球。毁灭恐龙的小行星之所以能来到地球，可能只是在太阳系形成初期因为旁边的小行星引力作用而偏离了角度。如果它没有被推动，它会完全和地球擦肩而过，恐龙依然生活在地球上，我们的祖先还颤颤兢兢地爬行在恐龙的脚下。这是一个生存偶然性的极好例子，这颗小行星改变了一切，不是因为这个偶然的推动，我们至今还不存在。** 恐龙的灭绝为哺乳动物留下了巨大的生存空间。**
 
-直到有一天我们站了起来直立行走，从此和我们的祖先分道扬镳，我们从丛林的迷雾中走出来，我们的双眼不再迷恋地面，而是开始自由地探索奇迹。人类存在的大部分时间里，比如说前4万代人，都是流浪者，猎人和采集者混住在一起，制作工具、生活、给事物命名。
+**直到有一天我们站了起来直立行走，从此和我们的祖先分道扬镳，我们从丛林的迷雾中走出来，我们的双眼不再迷恋地面，而是开始自由地探索奇迹。**人类存在的大部分时间里，比如说前4万代人，都是流浪者，猎人和采集者混住在一起，制作工具、生活、给事物命名。
 
-只不过三万年前，我们才开始画出第一张画。 我们发明了天文学，事实上我们都是天文学家的后裔，我们的生存要依靠研究星星，用来预测冬天的到来和兽群的迁徙，以及战事是否会顺利。
+**只不过三万年前，我们才开始画出第一张画。** 我们发明了天文学，事实上我们都是天文学家的后裔，我们的生存要依靠研究星星，用来预测冬天的到来和兽群的迁徙，以及战事是否会顺利。
 
-然后，大约1万年前，我们的生活方式迎来了变革，我们的祖先学会了如何改变周围环境、栽培植物、驯养动物、耕作土地，定居下来，这改变了一切。有史以来第一次，我们可以拥有超过我们能带走的东西，我们需要把这些数量记录下来，大约6千年前，我们发明了书写。随后不久我们开始记录其他东西，不仅仅是粮食的数量，书写让我们保存我们的想法并跨越时间和空间来传播它们。泥板上的细小印记，成为了我们征服有限的生命的手段，从此文明开始加速。
+然后，**大约1万年前，我们的生活方式迎来了变革，我们的祖先学会了如何改变周围环境、栽培植物、驯养动物、耕作土地，定居下来，这改变了一切。**有史以来第一次，我们可以拥有超过我们能带走的东西，我们需要把这些数量记录下来，**大约6千年前，我们发明了书写。**随后不久我们开始记录其他东西，不仅仅是粮食的数量，书写让我们保存我们的想法并跨越时间和空间来传播它们。泥板上的细小印记，成为了我们征服有限的生命的手段，**从此文明开始加速**。
 
-仅仅在几百年前，地球一边的人类才发现，在地球的另一边竟然居住着和自己一样的生物。
+**仅仅在几百年前，地球一边的人类才发现，在地球的另一边竟然居住着和自己一样的生物。**
 
-就在几百年前，我们才学会了科学方法，去揭示大自然的秘密和规则。 科学的方法如此强大，从伽利略的望远镜第一次指向星空到人类在月球上留下足迹，只用了400年。
+**就在几百年前，我们才学会了科学方法**，去揭示大自然的秘密和规则。 科学的方法如此强大，从伽利略的望远镜第一次指向星空到人类在月球上留下足迹，只用了400年。
 
 ## 变革的基础
 
-农业革命影响深远，现代社会一切的富裕和安全都是建立在农业革命之上，人们定居下来形成永久村落，慢慢地，人类发展出阶级的社会结构，如城市、王国、国家，这正是后代大规模政治和社会制度的基础。
+农业革命影响深远，**现代社会一切的富裕和安全都是建立在农业革命之上**，人们定居下来形成永久村落，慢慢地，人类发展出阶级的社会结构，如城市、王国、国家，这正是后代大规模政治和社会制度的基础。
 
-农业革命之前，狩猎一采集者基本过着平均主义的生活方式，平均主义并不是自然的结果，而是来自于群体里所有人对社会地位渴求的结果。组成统一阵线的从属者，可以不断地把他们中间最独断专行的领袖型人物拉下马。因此，平均主义其实是一种异化的政治等级制度，弱者联合起来，有效地制裁强者的结果。但令人遗憾的是，这种平均主义结构在农业革命之后的绝大多数人类社会中都已消亡。社会结构的复杂使弱者的制裁能力变得越来越弱，而掌权者的权力变得愈发强大。一名野心勃勃的狩猎一采集者也许可以召集一帮朋友，拿上石斧和长矛去反抗雄性老大。但农业社会的统治者们却可以组建军队和秘密警察队伍，还能建造死亡集中营，制造五花八门的刑具。在农业社会，一个凡夫俗子可以在制度的庇护下组建一支军队，支配千倍于它的人口。从属者要想集合起来对抗领袖，已经不是那么容易的事了。
+农业革命之前，狩猎一采集者基本过着平均主义的生活方式，**平均主义并不是自然的结果，而是来自于群体里所有人对社会地位渴求的结果。组成统一阵线的从属者，可以不断地把他们中间最独断专行的领袖型人物拉下马。因此，平均主义其实是一种异化的政治等级制度，弱者联合起来，有效地制裁强者的结果。但令人遗憾的是，这种平均主义结构在农业革命之后的绝大多数人类社会中都已消亡。**社会结构的复杂使弱者的制裁能力变得越来越弱，而掌权者的权力变得愈发强大。一名野心勃勃的狩猎一采集者也许可以召集一帮朋友，拿上石斧和长矛去反抗雄性老大。但农业社会的统治者们却可以组建军队和秘密警察队伍，还能建造死亡集中营，制造五花八门的刑具。在农业社会，一个凡夫俗子可以在制度的庇护下组建一支军队，支配千倍于它的人口。从属者要想集合起来对抗领袖，已经不是那么容易的事了。
 
-农业革命在一开始只是各种小事，主要就是希望吃饱一点、生活安全一点，但最终却让远古的采集者开始花上整天的时间，在烈日之下挑水务农。虽然农民满怀忧虑地像工蚁一样疯狂工作，希望能够保障自己未来的经济安全，但这几乎从来未曾实现。不管哪个地方的农业社会，都出现了统治者和精英阶级，不仅靠着农民辛苦种出的食粮维生，还几乎全部征收抢光，正是这些征收来的多余食粮，养活了政治、战争、艺术和哲学，建起了宫殿、堡垒、纪念碑和庙宇。在现代晚期之前，总人口有九成以上都是农民，日出而作、胼手胝足。他们生产出来的多余粮食养活了一小撮的精英分子：国王、官员、战士、牧师、艺术家和思想家，但历史写的几乎全是这些人的故事。于是，历史只告诉了我们极少数的人在做些什么，而其他绝大多数人的生活只是不停挑水耕田。
+农业革命在一开始只是各种小事，主要就是希望吃饱一点、生活安全一点，但最终却让远古的采集者开始花上整天的时间，在烈日之下挑水务农。**虽然农民满怀忧虑地像工蚁一样疯狂工作，希望能够保障自己未来的经济安全，但这几乎从来未曾实现。不管哪个地方的农业社会，都出现了统治者和精英阶级，不仅靠着农民辛苦种出的食粮维生，还几乎全部征收抢光，正是这些征收来的多余食粮，养活了政治、战争、艺术和哲学，建起了宫殿、堡垒、纪念碑和庙宇。**在现代晚期之前，总人口有九成以上都是农民，日出而作、胼手胝足。他们生产出来的多余粮食养活了一小撮的精英分子：国王、官员、战士、牧师、艺术家和思想家，但历史写的几乎全是这些人的故事。于是，历史只告诉了我们极少数的人在做些什么，而其他绝大多数人的生活只是不停挑水耕田。
 
-并没有谁在策划着农业革命，也没有人在背后操纵农业革命发生，或是意图让人依赖谷类维生。如果非要找出一个原因，那就是人类的本性。我们自诩今天的繁荣都是因为自身的智慧和勤劳，可惜这只是一个美丽的幻想。我们能发展出文明，是受我们拥有的最原始的动机驱使。这些成就只是我们追逐本能和欲望的附属产物，本能和欲望驱使我们走向意外的繁荣。
+并没有谁在策划着农业革命，也没有人在背后操纵农业革命发生，或是意图让人依赖谷类维生。**如果非要找出一个原因，那就是人类的本性。我们自诩今天的繁荣都是因为自身的智慧和勤劳，可惜这只是一个美丽的幻想。**我们能发展出文明，是受我们拥有的最原始的动机驱使。这些成就只是我们追逐本能和欲望的附属产物，本能和欲望驱使我们走向意外的繁荣。
 
-社会的基础，不在于人的理想，而在于人类最基本的倾向和情感。自然选择既会作用于生理变化，也会作用于心理变化。就已知的历史来说，人类的行为并未发生多大的改变，也没有任何证据显示人类越来越聪明。生活方式和生活工具虽然变了，但动机和目标依然如故，我们体内依旧流淌着数千年前的血液。因此，历史经常重演也不足为奇。有史以来，人的演化一直是社会性的而不是生物性的：其进化程度不是经由物种遗传变异，而主要是因为经济、政治、知识和伦理道德的革新，通过模仿、习俗和教育一代一代地传递下去。
+**社会的基础，不在于人的理想，而在于人类最基本的倾向和情感。自然选择既会作用于生理变化，也会作用于心理变化。就已知的历史来说，人类的行为并未发生多大的改变，也没有任何证据显示人类越来越聪明。生活方式和生活工具虽然变了，但动机和目标依然如故，我们体内依旧流淌着数千年前的血液。**因此，历史经常重演也不足为奇。有史以来，人的演化一直是社会性的而不是生物性的：其进化程度不是经由物种遗传变异，而主要是因为经济、政治、知识和伦理道德的革新，通过模仿、习俗和教育一代一代地传递下去。
 
-人类顺从的天性与争强好胜的个人相结合，才能使一个社会有秩序地运行。可能是无数原因的结果，可能仅仅只是性格的不同，具有开创精神的个人的想法和决定会在很大程度上影响历史的进程，历史事件通过他们或者围绕着他们而发生。“历史是由全人类造就的”这句话是对的，但并不完整。或许所有个体或阶层都是历史的创造者，但历史大体上是由求新的少数人之间的冲突造成的，大多数人只是遵从着顺从的天性，挑水耕田之余为胜利者鼓掌欢呼，充当社会实验的人类原材料。
+**人类顺从的天性与争强好胜的个人相结合，才能使一个社会有秩序地运行。**可能是无数原因的结果，可能仅仅只是性格的不同，具有开创精神的个人的想法和决定会在很大程度上影响历史的进程，历史事件通过他们或者围绕着他们而发生。**“历史是由全人类造就的”这句话是对的，但并不完整。或许所有个体或阶层都是历史的创造者，但历史大体上是由求新的少数人之间的冲突造成的，大多数人只是遵从着顺从的天性，挑水耕田之余为胜利者鼓掌欢呼，充当社会实验的人类原材料。**
 
 ## 生物同源
 
-农业革命后的几千年里，猎人和采集者抛下了与自然紧紧相连的共生关系，住在永久聚落里，他们几乎整天都在一小片田地或果园里工作，他们开垦荒地用木块和石头给自己圈一小块地方，并称之为“家”，从此人类就和房屋这种构造建立起非常强烈的连接。这种变化意义深远，除了影响生活方式，更影响了心理。在农业革命之后，人类成了远比过去更以自我为中心的动物，与“自己家”紧密相连，但与周遭其他物种画出界线。
+农业革命后的几千年里，猎人和采集者抛下了与自然紧紧相连的共生关系，住在永久聚落里，他们几乎整天都在一小片田地或果园里工作，他们开垦荒地用木块和石头给自己圈一小块地方，并**称之为“家”**，从此人类就和房屋这种构造建立起非常强烈的连接。这种变化意义深远，除了影响生活方式，更影响了心理。**在农业革命之后，人类成了远比过去更以自我为中心的动物，与“自己家”紧密相连，但与周遭其他物种画出界线。**
 
-渐渐地，我们忘记了在丛林中狩猎采集式的生活，我们开始自视纯洁、道德，拥有高尚的灵魂，是上帝的宝贝、龙的传人。但我们始终不过是穿着裤子的猴子，人类与动物之间的界限难免会变得模糊。只要群体中有人作出野兽般的行径，我们就会认为他低下、卑劣，将他们视为恶心和野蛮。虽然厌恶感进化出来是为了保护我们的身体，但随着人类历史的发展，厌恶感也悄然发生了变化，由保护身体扩展为保护灵魂。我们现在自视纯洁高贵，如果有任何东西威胁到我们的自我形象，提醒我们自己不过是动物，我们都会对其产生本能的厌恶。
+渐渐地，**我们忘记了在丛林中狩猎采集式的生活，我们开始自视纯洁、道德，拥有高尚的灵魂，是上帝的宝贝、龙的传人。但我们始终不过是穿着裤子的猴子，人类与动物之间的界限难免会变得模糊。只要群体中有人作出野兽般的行径，我们就会认为他低下、卑劣，将他们视为恶心和野蛮。虽然厌恶感进化出来是为了保护我们的身体，但随着人类历史的发展，厌恶感也悄然发生了变化，由保护身体扩展为保护灵魂。我们现在自视纯洁高贵，如果有任何东西威胁到我们的自我形象，提醒我们自己不过是动物，我们都会对其产生本能的厌恶。**
 
 虽然大多数人都愿意把对资源、权利和浪漫激情的欲望美化为对自我实现的追求，但有人认为，人类所谓的智慧就如同孔雀的羽毛，极尽炫耀，只是为了获得异性关注和世人认可，所有的艺术和文学作品，比如莫扎特、莎士比亚和米开朗琪罗，还有帝国大厦都是精心策划的炫耀仪式，也许这都无所谓，因为我们靠最原始的内驱力得到了数之不尽的收获。但孔雀终究不能飞，活在肮脏的环境里，啄食秽物里的蛆虫，却还以华丽的美貌安慰自己。
 
-地球上所有的生物体均采用相同的代码手册将遗传代码进行编码，并在后代中复制。小鼠基因与人类相似度约95％，黑猩猩基因与人类相似度高达99％。尽管我们和黏液菌表面上有些不同，本质上我们却密切相关，在分子水平上，所有的生命并无差别。地球上的所有生命本是同源，我们根源于一种古老的生命形式，它始于约35亿年前，人类是自然选择的直接结果，位于进化树中数不胜数的众多分支中的一个细小叶枝上。
+地球上所有的生物体均采用相同的代码手册将遗传代码进行编码，并在后代中复制。小鼠基因与人类相似度约95％，黑猩猩基因与人类相似度高达99％。尽管我们和黏液菌表面上有些不同，**本质上我们却密切相关，在分子水平上，所有的生命并无差别。地球上的所有生命本是同源，我们根源于一种古老的生命形式，它始于约35亿年前，人类是自然选择的直接结果，位于进化树中数不胜数的众多分支中的一个细小叶枝上。**
 
 ## 人类的意义
 
