--- a/意义.md
+++ b/意义.md
@@ -72,9 +72,9 @@
 
 ## 人类的意义
 
-“人类仅仅是一个较小岩石行星上的有机污垢，这个行星绕着一个很普通的恒星公转，而这个恒星坐落在一个星系的边缘，而这个星系又是上千亿个星系中的一个。”既然我们不在宇宙的中心，我们体内的原子来自星辰的灰烬，我们不是上帝的宝贝，我们并不重要，那么我们根据神学建立的道德准则又有什么意义呢？ 英国评论性杂志<Observer>在1892年发表的一篇评议中说："科学不断地给人类带来精神上的腐蚀，如果把地球当作一座蚁山，人的一生看作是在许多小洞洞进进出出寻找食物与阳光的蚂蚁的一生，那么十分肯定，对人类一生的责任不必太重视，并且可以用一种深刻的宿命论和绝望，而不是抱有希望，来看待人类的追求 。"
+***“人类仅仅是一个较小岩石行星上的有机污垢，这个行星绕着一个很普通的恒星公转，而这个恒星坐落在一个星系的边缘，而这个星系又是上千亿个星系中的一个。”***既然我们不在宇宙的中心，我们体内的原子来自星辰的灰烬，我们不是上帝的宝贝，我们并不重要，那么我们根据神学建立的道德准则又有什么意义呢？ 英国评论性杂志<Observer>在1892年发表的一篇评议中说："科学不断地给人类带来精神上的腐蚀，如果把地球当作一座蚁山，人的一生看作是在许多小洞洞进进出出寻找食物与阳光的蚂蚁的一生，那么十分肯定，对人类一生的责任不必太重视，并且可以用一种深刻的宿命论和绝望，而不是抱有希望，来看待人类的追求 。"
 
-尼采说，只要有了活下去的理由，几乎什么都能够忍受。那么我们活着的理由是什么？中世纪的人相信死后可以得到永恒的祝福，很有可能就会认为生活真是充满了价值和意??；相对而言，现代世俗子民如果不信这一套，觉得人到最后只有死亡，迟早会被遗忘，没了任何意义。所以，中世纪的人们会感到快乐，就只是因为他们有着对来世的集体错觉，因而感觉生命充满意义吗？恐怕是的。只要我们个人对意义的错觉和现行的集体错觉达成同步，我就能说服自己、觉得自己的生命有意义，而且也能从这个信念中得到快乐。
+尼采说，只要有了活下去的理由，几乎什么都能够忍受。那么我们活着的理由是什么？中世纪的人相信死后可以得到永恒的祝福，很有可能就会认为生活真是充满了价值和意??；相对而言，现代世俗子民如果不信这一套，觉得人到最后只有死亡，迟早会被遗忘，没了任何意义。所以，中世纪的人们会感到快乐，就只是因为他们有着对来世的集体错觉，因而感觉生命充满意义吗？恐怕是的。**只要我们个人对意义的错觉和现行的集体错觉达成同步，我就能说服自己、觉得自己的生命有意义，而且也能从这个信念中得到快乐。**
 
 从我们所知的纯粹科学角度来看，人类的生命本来就完全没有意义。人类只是在没有特定目标的演化过程中，盲目产生的结果。人类的行动没有什么神圣的整体计划，而且如果整个地球明天早上就爆炸消失，整个宇宙还是一样这么继续运行下去。也就是说，我们对生活所赋予的任何意义，其实都只是错觉。不管是中世纪那种超脱凡世的生活意义，或是现代人文主义、民族主义和资本主义，本质上都完全相同，没有高下之别。像是可能有科学家觉得自己增加了人类的知识，所以他的生命有意义；有士兵觉得他保卫自己的国家，所以他的生命有意义。不论是创业者想要开新公司，或是中世纪的人想要读经、参与圣战、兴建新庙，他们从中感受到的意义，都只是错觉与幻想。
 
