--- a/意义.md
+++ b/意义.md
@@ -72,42 +72,43 @@
 
 ## 人类的意义
 
-***“人类仅仅是一个较小岩石行星上的有机污垢，这个行星绕着一个很普通的恒星公转，而这个恒星坐落在一个星系的边缘，而这个星系又是上千亿个星系中的一个。”***既然我们不在宇宙的中心，我们体内的原子来自星辰的灰烬，我们不是上帝的宝贝，我们并不重要，那么我们根据神学建立的道德准则又有什么意义呢？ 英国评论性杂志<Observer>在1892年发表的一篇评议中说："科学不断地给人类带来精神上的腐蚀，如果把地球当作一座蚁山，人的一生看作是在许多小洞洞进进出出寻找食物与阳光的蚂蚁的一生，那么十分肯定，对人类一生的责任不必太重视，并且可以用一种深刻的宿命论和绝望，而不是抱有希望，来看待人类的追求 。"
+***“人类仅仅是一个较小岩石行星上的有机污垢，这个行星绕着一个很普通的恒星公转，而这个恒星坐落在一个星系的边缘，而这个星系又是上千亿个星系中的一个。”***既然我们不在宇宙的中心，我们体内的原子来自星辰的灰烬，我们不是上帝的宝贝，我们并不重要，那么我们根据神学建立的道德准则又有什么意义呢？ 英国评论性杂志<Observer>在1892年发表的一篇评议中说：*"科学不断地给人类带来精神上的腐蚀，如果把地球当作一座蚁山，人的一生看作是在许多小洞洞进进出出寻找食物与阳光的蚂蚁的一生，那么十分肯定，对人类一生的责任不必太重视，并且可以用一种深刻的宿命论和绝望，而不是抱有希望，来看待人类的追求。"*
 
-尼采说，只要有了活下去的理由，几乎什么都能够忍受。那么我们活着的理由是什么？中世纪的人相信死后可以得到永恒的祝福，很有可能就会认为生活真是充满了价值和意??；相对而言，现代世俗子民如果不信这一套，觉得人到最后只有死亡，迟早会被遗忘，没了任何意义。所以，中世纪的人们会感到快乐，就只是因为他们有着对来世的集体错觉，因而感觉生命充满意义吗？恐怕是的。**只要我们个人对意义的错觉和现行的集体错觉达成同步，我就能说服自己、觉得自己的生命有意义，而且也能从这个信念中得到快乐。**
+尼采说，只要有了活下去的理由，几乎什么都能够忍受。那么我们活着的理由是什么？中世纪的人相信死后可以得到永恒的祝福，很有可能就会认为生活真是充满了价值和意；相对而言，现代世俗子民如果不信这一套，觉得人到最后只有死亡，迟早会被遗忘，没了任何意义。所以，中世纪的人们会感到快乐，就只是因为他们有着对来世的集体错觉，因而感觉生命充满意义吗？恐怕是的。**只要我们个人对意义的错觉和现行的集体错觉达成同步，我就能说服自己、觉得自己的生命有意义，而且也能从这个信念中得到快乐。**
 
-从我们所知的纯粹科学角度来看，人类的生命本来就完全没有意义。人类只是在没有特定目标的演化过程中，盲目产生的结果。人类的行动没有什么神圣的整体计划，而且如果整个地球明天早上就爆炸消失，整个宇宙还是一样这么继续运行下去。也就是说，我们对生活所赋予的任何意义，其实都只是错觉。不管是中世纪那种超脱凡世的生活意义，或是现代人文主义、民族主义和资本主义，本质上都完全相同，没有高下之别。像是可能有科学家觉得自己增加了人类的知识，所以他的生命有意义；有士兵觉得他保卫自己的国家，所以他的生命有意义。不论是创业者想要开新公司，或是中世纪的人想要读经、参与圣战、兴建新庙，他们从中感受到的意义，都只是错觉与幻想。
+**从我们所知的*纯粹科学角度*来看，人类的生命本来就完全没有意义。人类只是在没有特定目标的演化过程中，盲目产生的结果。人类的行动没有什么神圣的整体计划，而且如果整个地球明天早上就爆炸消失，整个宇宙还是一样这么继续运行下去。**也就是说，我们对生活所赋予的任何意义，其实都只是错觉。不管是中世纪那种超脱凡世的生活意义，或是现代人文主义、民族主义和资本主义，本质上都完全相同，没有高下之别。像是可能有科学家觉得自己增加了人类的知识，所以他的生命有意义；有士兵觉得他保卫自己的国家，所以他的生命有意义。不论是创业者想要开新公司，或是中世纪的人想要读经、参与圣战、兴建新庙，他们从中感受到的意义，都只是错觉与幻想。
 
-有人认为，人类是进化几十亿年的结果，我们现在可以制造宇宙飞船和大型强子对撞机，我们可以分离原子，并且掌握了核能。我们孕育出如此辉煌的文明，理所当然地，我们的存在是被赋予意义的。可是，在我们觉醒的过程中，最令人沮丧的发现之一，就是科学的中立：它随时愿为我们疗伤，也随时愿为我们杀人；它能为我们建设，破坏起来也更厉害。科学这条路通向何处，还不清楚。从历史的过程中，我们认为，人类的本性并没有发生实质性的改变，所有的科学技术成就，都不得不被看成是用新方法完成旧目标 —— 取得财货，追求异性（或者同性），在竞争中取胜，发动战争。我们所谓的成就，只不过是改善了追求本性的手段罢了。
+有人认为，人类是进化几十亿年的结果，我们现在可以制造宇宙飞船和大型强子对撞机，我们可以分离原子，并且掌握了核能。我们孕育出如此辉煌的文明，理所当然地，我们的存在是被赋予意义的。可是，在我们觉醒的过程中，最令人沮丧的发现之一，就是**科学的中立**：它随时愿为我们疗伤，也随时愿为我们杀人；它能为我们建设，破坏起来也更厉害。科学这条路通向何处，还不清楚。从历史的过程中，我们认为，人类的本性并没有发生实质性的改变，所有的科学技术成就，都不得不被看成是**用新方法完成旧目标** —— 取得财货，追求异性（或者同性），在竞争中取胜，发动战争。我们所谓的成就，只不过是改善了追求本性的手段罢了。
 
 ## 满足于自己的小循环
 
 那么对于个体来说，活着的意义是什么？如果把人生看作一个故事，那么这个故事有寓意吗？
 
-Alfred Adler总结道，任何人的生活都受限于三个约束：1、我们都生活在地球这个星球上，我们尽量利用地球上的各种资源和限制而生存；
-2、没有人是一座孤岛，人是社会性动物，我们的生活是与人相联的，一旦孤独而居，我们就会灭亡；
-3、人类由两性构成。
+Alfred Adler总结道，任何人的生活都受限于三个约束：
+*1、我们都生活在地球这个星球上，我们尽量利用地球上的各种资源和限制而生存；*
+*2、没有人是一座孤岛，人是社会性动物，我们的生活是与人相联的，一旦孤独而居，我们就会灭亡；*
+*3、人类由两性构成。*
 
-这三个约束构成了一切人类问题：职业类、社会类和性类。个人对于生命意义的阐释，无一例外地显示于他对这三大问题的反应之中。
+这三个约束构成了一切人类问题：**职业类、社会类和性类**。个人对于生命意义的阐释，无一例外地显示于他对这三大问题的反应之中。
 
-从基因角度上来看，每个人几乎都是一样的。相似的基因造出了相似的大脑，大脑中相似的机制引发每个人的思维。尽管不同的生长环境，不同的文化背景会对每个人的思维产生影响，但大体上来说，每个人的情感、个性上总有很多共性的。
+**从基因角度上来看，每个人几乎都是一样的。相似的基因造出了相似的大脑，大脑中相似的机制引发每个人的思维。**尽管不同的生长环境，不同的文化背景会对每个人的思维产生影响，但大体上来说，每个人的情感、个性上总有很多共性的。
 
 可能正是因为每个人的生物学基础和所生存的物理、心理环境大体相同，发展心理学家们才能用"孕期－婴儿期－学步期－学前期－儿童中期－青少年（早、晚）期－成人（早、中、晚）期－高寿期"概括所有人的一生，以及每个阶段的心理发展主题和所需获得的能力。
 
-像一个个没有止境的荒谬小循环，一出生你的名字和序号就已经写好了，人生的下一步就像已经提前安排好的阶段一样，带着好好学习的要求去做一个乖孩子，然后听从父母的意思找个所谓的稳定好工作，然后嫁个好人家，生个好孩子，再把父母的价值观传输给下一代。。。 我们极少怀疑我们的选择及其含义，大部分时候我们被告知接下来该做什么，大多数人的未来不会有多大改变。
+像一个个没有止境的荒谬小循环，一出生你的名字和序号就已经写好了，人生的下一步就像已经提前安排好的阶段一样，带着好好学习的要求去做一个乖孩子，然后听从父母的意思找个所谓的稳定好工作，然后嫁个好人家，生个好孩子，再把父母的价值观传输给下一代。。。 **我们极少怀疑我们的选择及其含义，大部分时候我们被告知接下来该做什么，大多数人的未来不会有多大改变。**
 
-我们可以在对我们所生活的世界毫无了解的情形下进行日常生活。我们只需要了解什么食物可以吃、什么动物会咬人、什么技能更有市场，大自然无法迫使我们去了解时间是什么、小行星什么时候会再次撞击地球这些问题。我们被局限在有限的时空之中，以为世界本该就是这样，不假思索地重复着上一代人的生活。
+我们可以在对我们所生活的世界毫无了解的情形下进行日常生活。我们只需要了解什么食物可以吃、什么动物会咬人、什么技能更有市场，大自然无法迫使我们去了解时间是什么、小行星什么时候会再次撞击地球这些问题。**我们被局限在有限的时空之中，以为世界本该就是这样，不假思索地重复着上一代人的生活。**
 
 ##  "我"
 
-个体在宇宙时间中只是一瞬，是地球上的一个匆匆过客，是其所属种群的一分子，是其所属种族的后裔，是肉身、性格和思想的复合体，是家庭和社会的一员，是某种信仰的支持者或者怀疑者，是某经济体中的一个单位。我们只是一成不变地重复着自己的生活，但却幻想着自己有一些很特别的方式来感知这个世界。
+个体在宇宙时间中只是一瞬，是地球上的一个匆匆过客，是其所属种群的一分子，是其所属种族的后裔，是肉身、性格和思想的复合体，是家庭和社会的一员，是某种信仰的支持者或者怀疑者，是某经济体中的一个单位。**我们只是一成不变地重复着自己的生活，但却幻想着自己有一些很特别的方式来感知这个世界。**
 
 我们美化自己的伴侣以提高自己的价值感；把欲望合理化为追求自我实现；在他人面前进行策略化行为展示；通过自我辩解和扭曲事实来维护自己的形象……我们以自我为中心，这可能是进化的残酷方式造就的，也可能是个体心理发展和认识世界的过程所致，或许是和渴望处在宇宙中心同样的原因，使我们每个人都有认为自己是最特别的幻想。
 
-我们生活在“意义”的领域中，我们是通过我们赋予现实的意义来感受现实的。我们所能感受到的，不是现实本身，而是经过阐释的现实。因此，当你老了，回顾一生，你可以顺理成章地发觉：什么时候出国读书，什么时候决定做第一份职业、什么时候选定了对象而恋爱、什么时候结婚生子，其实都被认为是命运的巨变。
+**我们生活在“意义”的领域中，我们是通过我们赋予现实的意义来感受现实的。我们所能感受到的，不是现实本身，而是经过阐释的现实。**因此，当你老了，回顾一生，你可以顺理成章地发觉：什么时候出国读书，什么时候决定做第一份职业、什么时候选定了对象而恋爱、什么时候结婚生子，都是命运的巨变。
 
 “我”对于每个个体来说无疑是最特殊最重要的，简单的一句“因为我是我”，可以诠释自己所有的行为。“我”所走过的路，所做过的蠢事，即使和其他人一样，在自己看来也具有最特别的意义。
 
-我们的身份通过我们的经历、记忆和想象一点点形成，这个过程让"我"成为我。不存在两个完全相同的自我意识，也没有人的自我意识是一成不变的。生命就是一次使我们成为唯一的旅行。
+我们的身份通过我们的经历、记忆和想象一点点形成，这个过程让"我"成为我。不存在两个完全相同的自我意识，也没有人的自我意识是一成不变的。**生命就是一次使我们成为唯一的旅行。**
 
-或许我们可以从这仅有的一次旅行中寻找属于自己的独特意义。虽然有点偏执，虽然注定渺小和卑微，但足以让人保持求生意志。
+**或许我们可以从这仅有的一次旅行中寻找属于自己的独特意义。虽然有点偏执，虽然注定渺小和卑微，但足以让人保持求生意志。**
