--- a/可怜之人真有其可恨之处吗.md
+++ b/可怜之人真有其可恨之处吗.md
@@ -8,6 +8,62 @@
 
 > 认知失调理论：心理学上用来描述个体在同一时间有着两种相冲突的认知，因而产生了一种不甚舒适的紧张状态。相冲突的认知是一种原动力，会强迫个体去寻求或发明新的思想或信念，或是修改心中已存在的信念，好让因相冲突的认知带来的不适程度削减到最低。
 
-你有没有为了调节好友的发怒情绪，而对TA说：“去吧，把它发泄出去……不要让它藏在心里”？研究证明，这种以相对安全的方式给愤怒的人提供一个机会去表达他们对某个特定目标的愤怒，会增加他们对该目标的厌恶程度。为什么民间智慧与科学结论之间会出现矛盾呢？因为人类是能够进行认知的动物。因此，对我们来说，攻击性不仅仅取决于我们所感受到的紧张状态，而且还取决于我们的思维。
+你有没有为了调节好友的发怒情绪，而对TA说：“……去把它发泄出去……不要让它藏在心里”？研究证明，这种以相对安全的方式给愤怒的人提供一个机会去表达他们对某个特定目标的愤怒，会增加他们对该目标的厌恶程度。为什么民间智慧与科学结论之间会出现矛盾呢？因为人类是能够进行认知的动物。因此，对我们来说，攻击性不仅仅取决于我们所感受到的紧张状态，而且还取决于我们的思维。
 
+从某种意义上讲，你需要对最初的敌对性行为进行辩护。当一个人对另一个人造成伤害时，他便会开始通过认知机制对这种残忍的行为加以辩护。具体而言，当我们伤害了另一个人时，我们便会体验到认知失调。＂我伤害了他＂的认知，与＂我是一个正派、理智、善良的人，我不会肆无忌惮地到处伤害他人＂的认知之间，就会产生失调。减少这种失调的最好方式就是让自己相信，伤害他并不是一件不正派、不理智、不善良的事情。为了做到这一点，我会忽略他的优点而去强调他的缺陷和不足，会让自己相信他是一个很糟糕的人，他是咎由自取。这样，失调就会减少，并为进一步攻击他提供借口。
 
+一个可悲的事实是：一旦你曾经对某个人加以诋毁，那么你将来便更容易去伤害他。在我们伤害了这个人之后，就会认为这个人的吸引力下降。尽管那个人没有做出什么该受指责的事情，而自己的伤害也不是有意的，但对那个人的态度还是会发生变化。
+
+## 为残酷行为辩解
+
+在一个实验中，当研究者劝诱被试向他人发出一系列电击时，那些自认为善良正派的人，会因为自己曾经给受害者造成伤害而对他们加以贬低，这一结果在自尊心强的人身上表现得最为明显。假如我认为自己是一个无赖，那么因此而导致其他人受到伤害便不会对我引起太大的失调；这样我们便不太需要使自己相信他们因该得到那样的报应。想象一下这是多么具有讽刺意味的事情：就是因为我们认为自己是个非常好的人，假如我的行为导致了你的痛苦，我就必须要让自己相信你是个卑鄙小人。换句话说，因为像我这样好的人不可能没事找事去伤害一个无辜的人，所以如果我伤害了你一定是因为你做了什么龌龊的事。
+
+有些因素会影响这种现象的普遍性。上面已经提到过其中的一个因素：那些自尊心差的人不太会去贬损他们的受害者。另一个限制贬低现象的因素是受害者的报复能力：假如受害者有能力且力图在将来的某个时候进行报复，伤害者感到自己将来也会受到同样的伤害，因而便不会通过贬损受害者来为自己的行为辩护。由于受害者能够进行报复，失调便减少了，伤害者不需要为了让自己相信受害者是咎由自取而去贬低他。
+
+这些结果暗示，在战争期间，与那些军人受害者相比，士兵们对平民受害者做出贬损的需要更为强烈，因为他们不可能进行报复。在对屠杀越南的无辜平民的美国中尉卡利进行军事法庭调查时，他的精神病学家说，中尉认为越南人是劣等民族。“人们不可能做出某种残忍的行为而内心不受伤害。”我们并不确切知道卡利中尉（或许多其他人）为什么会认为越南人是劣等民族，但下面这种假设可能是有道理的：在战争中，由于我们的行为，大批无辜平民命丧黄泉。绝大多数人故意将痛苦强加于人是很困难的。为开脱责任，我们会尽力去贬损受害者，来为所造成的后果中我们应当承担的责任进行辩护。我们会戏弄他们，称他们为＂亚洲佬＂，将他们非人化，以削减内心的愧疚。但是，一旦我们成功地做到了这一点，就需要警惕，因为屠杀“劣等人”比杀害同类人更容易。人们可以把各种暴力行为施加在无辜者的头上，并为它进行辩解；反过来，这些辩解可以导致更多的暴力行为。因此，用这一方法减少不协调，后果将是可怕的，它可能使我们犯下越来越大的暴行。
+
+对于处于支配群体并相对具有安全感的人们来说，通情并不是呼之既来的。虽然他们可能产生“同情之心”，但“自我正确的意识”的痕迹常常会潜入他们的态度，使他们容易将罪名归因于受害者。这种情形总是以“罪有应得”的形式出现。例如，如果犹太人在历史上一直遭受迫害，那说明他们一定是做了某种错事。如果她遭到强暴，那说明她一定有过煽情的举止。911屠杀之后，反美恐怖分子会对数以千计的无辜受害者家庭感到悲哀和同情吗？他们是否认为美国人民所遭受的伤害已经足够多了？暴力行为增加了人们对受害者的负面情感。最终，暴力几乎总是滋生了更多的暴力。
+
+“暴力滋生暴力”这句话，不仅仅包含着受害者对自己的敌人加以反击的简单含义，它还包含着更为复杂而潜在的含义：攻击者通过夸大他们敌人的罪恶来为自己的暴力辩护，从而増加他们一再发起攻击的可能性。从来没有一场战争能结束所有的战争和骚乱、扫除所有的不公正，恰恰相反的是：好战的行为强化着好战的态度，而好战的态度又增加了好战行为出现的可能性。我们必须找到另外的方式。一种不太具有攻击性的工具性行为，可以既有助于消除社会病症，而又不会陷入一种不可调和冲突的循环。
+
+## 谴责受害者
+
+如果降临在受害者身上的伤害不是你直接造成的，你仅仅是不喜欢他，而且希望伤害降临到他头上，那么类似的机制也起作用。例如，今年春节期间一个动物园发生了老虎吃人的惨剧，我没有主动关注过这件事，但让我印象深刻的是，凡是和我谈到这件事的人，基本都会说到“那个人当时是为了逃票翻墙”之类的话。更有网友表达出了“不守规则的人其实是该死”的观点。
+
+其实刚开始关于死者为何会进入老虎区存在几种猜测，逃票只是其中一个，并且导致其落入虎口的直接原因也不是逃票（为了取回掉落的手机？）。重点是，人们为什么那么急于相信并传播这样的信息？事情确切的原因我无法得知，但根据不协调理论进行分析，进入老虎区的行为是严厉禁止的，但死亡的惩罚远远超出了其应得的范围。在这种情况下，任何对受害者不利的消息，都意味着不幸的死亡只不过是罪有因得，做出“逃票行为”的受害者已经被符号化成一个懒惰贪小便宜、践踏规则、品性低劣的形象，因而有助于减轻不协调引起的不适。
+
+设想上世纪的美国，社会将少数族裔限制在拥挤的贫民窟中，并且营造了某种环境，在这种环境里，有色人种几乎不可避免地被排斥在大多数美国人所拥有的发展和成功的机会之外。借助电视的神奇力量，少数族裔看到人们取得成功而且过着奢华而体面的中产阶级生活。他们痛苦地意识到，自己不可能拥有机会享受舒适和奢华。如果挫折导致他们采取暴力行为，或者失望导致他们去沾染毒品，这便很容易让他们的白人兄弟姐妹们，自鸣得意地靠在椅背上煞有介事地摇着头，将他们的行为归因于某种品性低劣。这种自证预言，为残忍和忽视提供了极好的辩护，也为将黑人和拉美人视为品性低劣提供了极好的辩护。
+
+当一些不幸降临到我们头上时，我们倾向于从某些自身之外的方面进行归因；但当我们看到同样的不幸降临到他人头上时，我们倾向于从那人个性中某种固有的缺陷进行归因。
+
+## 不要以为世界是公正的
+
+具有讽刺意味的是，将受到伤害归咎于受害者本人，将受害者所处的困境归因于他们的人格和无能，这样一种倾向却是由人们追求公平世界的愿望所引起的。人们倾向于将一些用其他方法难以解释的不平等归咎于个人。大多数旁观者会评价那个运气不好的人工作不够努力。同样，对穷人的负向态度（包括将他们的困难处境归咎于他们自身）在那些强烈地主张世界公平的人们中间也极为普遍。显然，如果我们看到自己生活在一个人们无缘无故地被剥夺掉他们的应得（同工同酬）或需要（生活必需品）的世界上，我们将会感到恐惧。出于同样的理由，如果千万犹太人无缘无故地遭到杀戮，和让自己相信他们做了错事才遭此报应相比，后者会让人心里好受一些。
+
+很多人都对自己所在的组织抱有自欺欺人的想法。这是因为人们更愿意相信这个世界是公平公正的，每一个人都会得到他理应得到的东西。既然人们倾向于认为自己理应得到某些东西，他们就会想，只要自己做好工作，举止得当，事情就会水到渠成。而且，每当人们看到有人在进行他们认为不适当的自我夸大或吹嘘时，大多数人都会认为，从他们身上学不到什么东西，因为这些人即使获得了一时的成功，他们最终也会垮台。
+
+“世界是公平公正的”这种信念十分普遍，学者们将该现象称为“公正世界假设”，人们倾向于认为世界是可以预测和可以理解的，因此人们才有可能对其加以控制。
+
+公正世界假设认为，大多数人都以为人们会得到他们理应拥有的东西；也就是说，好人会有好报，坏人会受到惩罚。最重要的是，这个机制也在逆向发挥作用：如果有人成功了，那么观察者就会倾向于认为这个人必定是做了什么事情，让自己值得拥有现在的成就，这是一种社会心理倾向。强调“正面”行为的成功故事，有助于让我们相信这个世界是公正的，并让我们看到我们所期望看到的东西，即给成功人士添加了一些我们认为与成功有关的品质，即使他们并不一定真正具备这些品质。仅仅由于人们看到一个人得到了好结果，这个人就突然成了好人。相反，如果坏事发生在某个人身上，“公正世界假设会导致这样一个结论：受害者一定是坏人”。这就造成了我们上文所述的“谴责受害者”现象，人们会为罪行受害者或受损企业的不幸找到理由。反过来也是一样，不管一个人是怎么获得成功的，他的成功都会让人们努力寻找他的优点，以便为他的成功找到理由。大量的实验和实地考察都证明了公正世界效应的存在。
+
+相信世界的公平公正会是有好处的，它会让我们产生对自己的命运有控制感的错觉，从而带来行动的动力和对努力的美好预期。但如果世界是不公平的，不可控制的，没有逻辑的，那会怎样？就好像在玩恶搞版的超级玛丽，没有逻辑的游戏里，只能碰运气，按照自我幻想的逻辑去玩游戏永远都救不到你的碧琪公主。但这终归只是游戏，戏剧性的陷阱甚至不能给你带来一点点失落。可是在一个没有逻辑的真实世界里，没有明确的运作规则，你不知道怎么做才能得到自己想要的：自我实现、成就感、家人幸福、存在的意义……最终会像塞利格曼的那只习得性无助的狗，重复的失败造成听任摆布，进而形成一种对现实的无望和无可奈何的行为心理状态。
+
+> Learned helplessness产生的四个阶段：
+> a. 在努力进行反应却没有结果的“不可控状态”中体验各种失败与挫折。
+> b. 在体验的基础上进行认知。这时人会感到自己的反应和结果没有关系，产生“自己无法控制行为结果和外部事件”的认知。
+> c. 形成“将来结果也不可控”的期望，“结果不可控”的认知使人觉得自己对外部事件无能为力或感到无所适从，自己的反应无效，前景无望，即使努力也不可能取得成果，也就是说 ：“结果不可控”认知和期望使人产生无助感。
+> d. 表现出动机 、认知和情绪上的损害，严重影响后来的学习。
+
+如果我们认为自己生活在一个随机的、不可控制的世界中，大部分时间我们都会感到挫败和沮丧。我们渴望获得控制感和可预测的结果，为迎合这样的需要，我们放下了那怀疑一切的一般心态，扭曲自己的认知和态度，将无规律的世界美化成是因果相关、公平公正的，以支持自己的态度与行为。因为公正的世界是可以理解和可以预见的世界，如果你按规则行事，就会平平安安；不守规则，就会有麻烦。
+
+## 恨一个人比同情一个人更容易
+
+对于后见之明（事后诸葛亮）的研究能够进一步加深人们对“谴责受害人现象”的理解。当我们得知某事的结果时，围绕这件事的复杂的形势一下子变得一目了然，似乎我们从来就对此了如指掌，如果要我们预测结果，我们肯定是不费吹灰之力。但这只是一个幻觉。
+
+研究者在一系列有趣的实验中发现，后见之明的力量增加了被试对强奸受害者对其不幸应负有责任的认识。研究者让被试阅读两份曾在大学课堂上相识的一对男女的约会记录。这两份记录除了结尾一句不同，其余内容完全相同。其中半数被试看到的结尾是，“我所知道的下一件事，就是他强奸了我。”而另外半数被试看到的结尾是“我所知道的下一件事，就是他把我带回了家。”在要求被试忽略约会的结果后，研究者要求被试预测几种可能结局的概率。尽管在这两个版本的故事中，导致结果的事件完全相同，可读到“强奸结尾”的被试比读到“回家结尾”的被试更有可能预测强奸会发生。此外，读到“强奸结尾”的被试容易将强奸归罪于女孩的举止，如“她不应该让那个男孩吻她”。
+
+我们都记得鲁迅评价孔乙己时说过“可怜之人必有可恨之处”，意思是一个貌似可怜之人现实的不如意，定是由于之前的过错或咎由自取造成的。但认识到“自我正确意识”和“公正世界假说”的存在，在我们试图从受害者人格品性中搜寻原因之前，我们需要警惕：这个判断多大程度上是在我们有自我安慰需要的情境下进行的？
+
+上述实验中，“两个女孩”都做了相同的事，但是我们急需挖掘出那个遭遇不幸的女孩所做出的“可恨之事”来缓解内心的不适，这样才能使我们相对容易接受残忍且不公正的事实。
+
+也许恨一个人比同情一个人更容易。正如Balzac说的，“人类最难忍的是怜悯之情，……而仇恨是一剂滋补药，它能使人活下去，它唤起复仇的念头；可是，怜悯只能摧毁一个人的斗志，它使我们原来虚弱的身心更为衰弱。”
