--- a/可怜之人真有其可恨之处吗.md
+++ b/可怜之人真有其可恨之处吗.md
@@ -14,7 +14,7 @@
 
 一个可悲的事实是：一旦你曾经对某个人加以诋毁，那么你将来便更容易去伤害他。在我们伤害了这个人之后，就会认为这个人的吸引力下降。尽管那个人没有做出什么该受指责的事情，而自己的伤害也不是有意的，但对那个人的态度还是会发生变化。
 
-## 为残酷行为辩解
+### 为残酷行为辩解
 
 在一个实验中，当研究者劝诱被试向他人发出一系列电击时，那些自认为善良正派的人，会因为自己曾经给受害者造成伤害而对他们加以贬低，这一结果在自尊心强的人身上表现得最为明显。假如我认为自己是一个无赖，那么因此而导致其他人受到伤害便不会对我引起太大的失调；这样我们便不太需要使自己相信他们因该得到那样的报应。想象一下这是多么具有讽刺意味的事情：就是因为我们认为自己是个非常好的人，假如我的行为导致了你的痛苦，我就必须要让自己相信你是个卑鄙小人。换句话说，因为像我这样好的人不可能没事找事去伤害一个无辜的人，所以如果我伤害了你一定是因为你做了什么龌龊的事。
 
@@ -26,7 +26,7 @@
 
 “暴力滋生暴力”这句话，不仅仅包含着受害者对自己的敌人加以反击的简单含义，它还包含着更为复杂而潜在的含义：攻击者通过夸大他们敌人的罪恶来为自己的暴力辩护，从而増加他们一再发起攻击的可能性。从来没有一场战争能结束所有的战争和骚乱、扫除所有的不公正，恰恰相反的是：好战的行为强化着好战的态度，而好战的态度又增加了好战行为出现的可能性。我们必须找到另外的方式。一种不太具有攻击性的工具性行为，可以既有助于消除社会病症，而又不会陷入一种不可调和冲突的循环。
 
-## 谴责受害者
+### 谴责受害者
 
 如果降临在受害者身上的伤害不是你直接造成的，你仅仅是不喜欢他，而且希望伤害降临到他头上，那么类似的机制也起作用。例如，今年春节期间一个动物园发生了老虎吃人的惨剧，我没有主动关注过这件事，但让我印象深刻的是，凡是和我谈到这件事的人，基本都会说到“那个人当时是为了逃票翻墙”之类的话。更有网友表达出了“不守规则的人其实是该死”的观点。
 
@@ -36,7 +36,7 @@
 
 当一些不幸降临到我们头上时，我们倾向于从某些自身之外的方面进行归因；但当我们看到同样的不幸降临到他人头上时，我们倾向于从那人个性中某种固有的缺陷进行归因。
 
-## 不要以为世界是公正的
+### 不要以为世界是公正的
 
 具有讽刺意味的是，将受到伤害归咎于受害者本人，将受害者所处的困境归因于他们的人格和无能，这样一种倾向却是由人们追求公平世界的愿望所引起的。人们倾向于将一些用其他方法难以解释的不平等归咎于个人。大多数旁观者会评价那个运气不好的人工作不够努力。同样，对穷人的负向态度（包括将他们的困难处境归咎于他们自身）在那些强烈地主张世界公平的人们中间也极为普遍。显然，如果我们看到自己生活在一个人们无缘无故地被剥夺掉他们的应得（同工同酬）或需要（生活必需品）的世界上，我们将会感到恐惧。出于同样的理由，如果千万犹太人无缘无故地遭到杀戮，和让自己相信他们做了错事才遭此报应相比，后者会让人心里好受一些。
 
@@ -48,15 +48,15 @@
 
 相信世界的公平公正会是有好处的，它会让我们产生对自己的命运有控制感的错觉，从而带来行动的动力和对努力的美好预期。但如果世界是不公平的，不可控制的，没有逻辑的，那会怎样？就好像在玩恶搞版的超级玛丽，没有逻辑的游戏里，只能碰运气，按照自我幻想的逻辑去玩游戏永远都救不到你的碧琪公主。但这终归只是游戏，戏剧性的陷阱甚至不能给你带来一点点失落。可是在一个没有逻辑的真实世界里，没有明确的运作规则，你不知道怎么做才能得到自己想要的：自我实现、成就感、家人幸福、存在的意义……最终会像塞利格曼的那只习得性无助的狗，重复的失败造成听任摆布，进而形成一种对现实的无望和无可奈何的行为心理状态。
 
-> Learned helplessness产生的四个阶段：
-> a. 在努力进行反应却没有结果的“不可控状态”中体验各种失败与挫折。
-> b. 在体验的基础上进行认知。这时人会感到自己的反应和结果没有关系，产生“自己无法控制行为结果和外部事件”的认知。
-> c. 形成“将来结果也不可控”的期望，“结果不可控”的认知使人觉得自己对外部事件无能为力或感到无所适从，自己的反应无效，前景无望，即使努力也不可能取得成果，也就是说 ：“结果不可控”认知和期望使人产生无助感。
-> d. 表现出动机 、认知和情绪上的损害，严重影响后来的学习。
+> Learned helplessness产生的四个阶段：>
+> a. 在努力进行反应却没有结果的“不可控状态”中体验各种失败与挫折。>
+> b. 在体验的基础上进行认知。这时人会感到自己的反应和结果没有关系，产生“自己无法控制行为结果和外部事件”的认知。>
+> c. 形成“将来结果也不可控”的期望，“结果不可控”的认知使人觉得自己对外部事件无能为力或感到无所适从，自己的反应无效，前景无望，即使努力也不可能取得成果，也就是说 ：“结果不可控”认知和期望使人产生无助感。>
+> d. 表现出动机 、认知和情绪上的损害，严重影响后来的学习。>
 
 如果我们认为自己生活在一个随机的、不可控制的世界中，大部分时间我们都会感到挫败和沮丧。我们渴望获得控制感和可预测的结果，为迎合这样的需要，我们放下了那怀疑一切的一般心态，扭曲自己的认知和态度，将无规律的世界美化成是因果相关、公平公正的，以支持自己的态度与行为。因为公正的世界是可以理解和可以预见的世界，如果你按规则行事，就会平平安安；不守规则，就会有麻烦。
 
-## 恨一个人比同情一个人更容易
+### 恨一个人比同情一个人更容易
 
 对于后见之明（事后诸葛亮）的研究能够进一步加深人们对“谴责受害人现象”的理解。当我们得知某事的结果时，围绕这件事的复杂的形势一下子变得一目了然，似乎我们从来就对此了如指掌，如果要我们预测结果，我们肯定是不费吹灰之力。但这只是一个幻觉。
 
