--- a/可怜之人真有其可恨之处吗.md
+++ b/可怜之人真有其可恨之处吗.md
@@ -48,11 +48,11 @@
 
 相信世界的公平公正会是有好处的，它会让我们产生对自己的命运有控制感的错觉，从而带来行动的动力和对努力的美好预期。但如果世界是不公平的，不可控制的，没有逻辑的，那会怎样？就好像在玩恶搞版的超级玛丽，没有逻辑的游戏里，只能碰运气，按照自我幻想的逻辑去玩游戏永远都救不到你的碧琪公主。但这终归只是游戏，戏剧性的陷阱甚至不能给你带来一点点失落。可是在一个没有逻辑的真实世界里，没有明确的运作规则，你不知道怎么做才能得到自己想要的：自我实现、成就感、家人幸福、存在的意义……最终会像塞利格曼的那只习得性无助的狗，重复的失败造成听任摆布，进而形成一种对现实的无望和无可奈何的行为心理状态。
 
-> Learned helplessness产生的四个阶段：>
-> a. 在努力进行反应却没有结果的“不可控状态”中体验各种失败与挫折。>
-> b. 在体验的基础上进行认知。这时人会感到自己的反应和结果没有关系，产生“自己无法控制行为结果和外部事件”的认知。>
-> c. 形成“将来结果也不可控”的期望，“结果不可控”的认知使人觉得自己对外部事件无能为力或感到无所适从，自己的反应无效，前景无望，即使努力也不可能取得成果，也就是说 ：“结果不可控”认知和期望使人产生无助感。>
-> d. 表现出动机 、认知和情绪上的损害，严重影响后来的学习。>
+> Learned helplessness产生的四个阶段：
+  > a. 在努力进行反应却没有结果的“不可控状态”中体验各种失败与挫折。
+  > b. 在体验的基础上进行认知。这时人会感到自己的反应和结果没有关系，产生“自己无法控制行为结果和外部事件”的认知。
+  > c. 形成“将来结果也不可控”的期望，“结果不可控”的认知使人觉得自己对外部事件无能为力或感到无所适从，自己的反应无效，前景无望，即使努力也不可能取得成果，也就是说 ：“结果不可控”认知和期望使人产生无助感。
+  > d. 表现出动机 、认知和情绪上的损害，严重影响后来的学习。
 
 如果我们认为自己生活在一个随机的、不可控制的世界中，大部分时间我们都会感到挫败和沮丧。我们渴望获得控制感和可预测的结果，为迎合这样的需要，我们放下了那怀疑一切的一般心态，扭曲自己的认知和态度，将无规律的世界美化成是因果相关、公平公正的，以支持自己的态度与行为。因为公正的世界是可以理解和可以预见的世界，如果你按规则行事，就会平平安安；不守规则，就会有麻烦。
 
