--- a/可怜之人真有其可恨之处吗.md
+++ b/可怜之人真有其可恨之处吗.md
@@ -42,7 +42,7 @@
 
 很多人都对自己所在的组织抱有自欺欺人的想法。这是因为人们更愿意相信这个世界是公平公正的，每一个人都会得到他理应得到的东西。既然人们倾向于认为自己理应得到某些东西，他们就会想，只要自己做好工作，举止得当，事情就会水到渠成。而且，每当人们看到有人在进行他们认为不适当的自我夸大或吹嘘时，大多数人都会认为，从他们身上学不到什么东西，因为这些人即使获得了一时的成功，他们最终也会垮台。
 
-“世界是公平公正的”这种信念十分普遍，学者们将该现象称为“公正世界假设”，人们倾向于认为世界是可以预测和可以理解的，因此人们才有可能对其加以控制。
+“世界是公平公正的”这种信念十分普遍，学者们将该现象称为“公正世界假设”(Just-world hypothesis)，人们倾向于认为世界是可以预测和可以理解的，因此人们才有可能对其加以控制。
 
 公正世界假设认为，大多数人都以为人们会得到他们理应拥有的东西；也就是说，好人会有好报，坏人会受到惩罚。最重要的是，这个机制也在逆向发挥作用：如果有人成功了，那么观察者就会倾向于认为这个人必定是做了什么事情，让自己值得拥有现在的成就，这是一种社会心理倾向。强调“正面”行为的成功故事，有助于让我们相信这个世界是公正的，并让我们看到我们所期望看到的东西，即给成功人士添加了一些我们认为与成功有关的品质，即使他们并不一定真正具备这些品质。仅仅由于人们看到一个人得到了好结果，这个人就突然成了好人。相反，如果坏事发生在某个人身上，“公正世界假设会导致这样一个结论：受害者一定是坏人”。这就造成了我们上文所述的“谴责受害者”现象，人们会为罪行受害者或受损企业的不幸找到理由。反过来也是一样，不管一个人是怎么获得成功的，他的成功都会让人们努力寻找他的优点，以便为他的成功找到理由。大量的实验和实地考察都证明了公正世界效应的存在。
 
