--- a/可怜之人真有其可恨之处吗.md
+++ b/可怜之人真有其可恨之处吗.md
@@ -30,7 +30,7 @@
 
 如果降临在受害者身上的伤害不是你直接造成的，你仅仅是不喜欢他，而且希望伤害降临到他头上，那么类似的机制也起作用。例如，今年春节期间一个动物园发生了老虎吃人的惨剧，我没有主动关注过这件事，但让我印象深刻的是，凡是和我谈到这件事的人，基本都会说到“那个人当时是为了逃票翻墙”之类的话。更有网友表达出了“不守规则的人其实是该死”的观点。
 
-其实刚开始关于死者为何会进入老虎区存在几种猜测，逃票只是其中一个，并且导致其落入虎口的直接原因也不是逃票（为了取回掉落的手机？）。重点是，人们为什么那么急于相信并传播这样的信息？事情确切的原因我无法得知，但根据不协调理论进行分析，进入老虎区的行为是严厉禁止的，但死亡的惩罚远远超出了其应得的范围。在这种情况下，任何对受害者不利的消息，都意味着不幸的死亡只不过是罪有因得，做出“逃票行为”的受害者已经被符号化成一个懒惰贪小便宜、践踏规则、品性低劣的形象，因而有助于减轻不协调引起的不适。
+人们为什么那么急于相信并传播这样的信息？其实刚开始关于死者为何会进入老虎区存在几种猜测，逃票只是其中之一，并且导致其落入虎口的直接原因也不是逃票（为了取回掉落的手机？）。事情确切的原因我无法得知，但根据不协调理论进行分析，进入老虎区的行为是严厉禁止的，但死亡的惩罚远远超出了其应得的范围。在这种情况下，任何对受害者不利的消息，都意味着不幸的死亡只不过是罪有因得，做出“逃票行为”的受害者已经被符号化成一个懒惰贪小便宜、践踏规则、品性低劣的形象，因而有助于减轻不协调引起的不适。
 
 设想上世纪的美国，社会将少数族裔限制在拥挤的贫民窟中，并且营造了某种环境，在这种环境里，有色人种几乎不可避免地被排斥在大多数美国人所拥有的发展和成功的机会之外。借助电视的神奇力量，少数族裔看到人们取得成功而且过着奢华而体面的中产阶级生活。他们痛苦地意识到，自己不可能拥有机会享受舒适和奢华。如果挫折导致他们采取暴力行为，或者失望导致他们去沾染毒品，这便很容易让他们的白人兄弟姐妹们，自鸣得意地靠在椅背上煞有介事地摇着头，将他们的行为归因于某种品性低劣。这种自证预言，为残忍和忽视提供了极好的辩护，也为将黑人和拉美人视为品性低劣提供了极好的辩护。
 
